--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -82,8 +82,10 @@
   <string name="AttachmentUploadJob_compressing_video_start">Komprimiranje videozapisa…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Pogreška prilikom reprodukcije zvuka!</string>
-  <!--BlockedContactsActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">Blokirani kontakti</string> -->
+  <!--BlockedUsersActivity-->
+  <string name="BlockedUsersActivity__blocked_users_will">Blokirani korisnici vas neće moći nazvati niti vam slati poruke.</string>
+  <string name="BlockedUsersActivity__block">Blokiraj</string>
+  <string name="BlockedUsersActivity__unblock">Odblokiraj</string>
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">Blokiraj i napusti %1$s?</string>
   <string name="BlockUnblockDialog_block_s">Blokiraj %1$s?</string>
@@ -482,11 +484,14 @@
     <item quantity="few">Ovi članovi morat će prihvatiti pozivnicu da se ponovno pridruže ovoj grupi i neće primati poruke grupe dok ne prihvate:</item>
     <item quantity="other">Ovi članovi morat će prihvatiti pozivnicu da se ponovno pridruže ovoj grupi i neće primati poruke grupe dok ne prihvate:</item>
   </plurals>
-  <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
+  <!-- Removed by excludeNonTranslatables <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
     <item quantity="one">Ovaj član nije u mogućnosti pridružiti se Novim grupama i uklonjen je iz grupe:</item>
     <item quantity="few">Ovi članovi nisu u mogućnosti pridružiti se Novim grupama i uklonjeni su iz grupe:</item>
     <item quantity="other">Ovi članovi nisu u mogućnosti pridružiti se Novim grupama i uklonjeni su iz grupe:</item>
-  </plurals>
+  </plurals> -->
+  <!--GroupsV1MigrationSuggestionsReminder-->
+  <string name="GroupsV1MigrationSuggestionsReminder_not_now">Ne sada</string>
+  <!--GroupsV1MigrationSuggestionsDialog-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Napusti grupu?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Nećete više biti u mogućnosti slati i primati poruke u ovoj grupi.</string>
@@ -1157,9 +1162,13 @@
   <string name="WebRtcCallView__signal_voice_call">Signal glasovni poziv</string>
   <string name="WebRtcCallView__signal_video_call">Signal video poziv…</string>
   <string name="WebRtcCallView__start_call">Započni poziv</string>
-  <!-- Removed by excludeNonTranslatables <string name="WebRtcCallView__group_call">Grupni poziv</string> -->
+  <string name="WebRtcCallView__join_call">Pridruži se pozivu</string>
   <string name="WebRtcCallView__view_participants_list">Prikaži sudionike</string>
   <string name="WebRtcCallView__your_video_is_off">Vaš video je isključen</string>
+  <string name="WebRtcCallView__connecting">Povezivanje…</string>
+  <string name="WebRtcCallView__reconnecting">Ponovno povezivanje…</string>
+  <string name="WebRtcCallView__disconnected">Odspojeno</string>
+  <string name="WebRtcCallView__no_one_else_is_here">Nitko drugi nije ovdje</string>
   <!--CallParticipantsListDialog-->
   <plurals name="CallParticipantsListDialog_in_this_call_d_people">
     <item quantity="one">U ovom pozivu · %1$d osoba</item>
@@ -1332,12 +1341,12 @@ broj telefona</string>
   <string name="UpdateApkReadyListener_Signal_update">Signal ažuriranje</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Dostupna je nova verzija Signala, pritisnite za ažurirati</string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">Blokiraj %s?</string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Blokirani korisnici vas više neće moći nazvati niti vam slati poruke.</string>
-  <string name="UnknownSenderView_block">Blokiraj</string>
-  <string name="UnknownSenderView_share_profile_with_s">Podijeli profil s %s?</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Najlakši način za dijeljenje vaših podataka o profilu je dodavanje pošiljatelja u kontakte. Ako to ne želite, i dalje možete dijeliti podatke o profilu na ovaj način.</string>
-  <string name="UnknownSenderView_share_profile">Dijeli profil</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">Blokiraj %s?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Blokirani korisnici vas više neće moći nazvati niti vam slati poruke.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">Blokiraj</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">Podijeli profil s %s?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Najlakši način za dijeljenje vaših podataka o profilu je dodavanje pošiljatelja u kontakte. Ako to ne želite, i dalje možete dijeliti podatke o profilu na ovaj način.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">Dijeli profil</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">Pošalji poruku?</string>
   <string name="UntrustedSendDialog_send">Pošalji</string>
@@ -1728,7 +1737,7 @@ Uvezi sigurnosnu kopiju običnog teksta. Kompatibilno s \'SMSBackup And Restore\
   </plurals>
   <string name="GroupUtil_group_name_is_now">Naziv grupe je sada \'%1$s\'.</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Želite li da vaše ime i profilna slika budu vidljivi u ovoj grupi?</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Želite li da vaše ime i profilna slika budu vidljivi u ovoj grupi?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">Otključaj</string>
   <!--prompt_mms_activity-->
@@ -1955,7 +1964,6 @@ Uvezi sigurnosnu kopiju običnog teksta. Kompatibilno s \'SMSBackup And Restore\
   <string name="preferences__typing_indicators">Prikaži tipkanje</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Ako su potvrde o tipkanju onemogućene, nećete moći vidjeti potvrde o tipkanju od drugih.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Zatražite od tipkovnice da onemogući personalizirano učenje</string>
-  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">Blokirani kontakti</string> -->
   <string name="preferences_chats__when_using_mobile_data">Prilikom korištenja mobilnih podataka</string>
   <string name="preferences_chats__when_using_wifi">Prilikom korištenja Wi-Fi-ja</string>
   <string name="preferences_chats__when_roaming">Prilikom roaminga</string>
