--- a/app/src/main/res/values-te/strings.xml
+++ b/app/src/main/res/values-te/strings.xml
@@ -899,12 +899,12 @@
   <string name="UpdateApkReadyListener_Signal_update">Signal నవీకరణ</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Signal యొక్క కొత్త వివరణం అందుబాటులో ఉంది, నవీకరణ కొరకు తట్టండి</string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">%s ని నిరోధించాల?</string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">నిరోధించబడిన పరిచయాలు ఇకపై మీకు సందేశాలను పంపలేవు మరియు మీకు కాల్ చేయలేవు.</string>
-  <string name="UnknownSenderView_block">నిరోధించు</string>
-  <string name="UnknownSenderView_share_profile_with_s">%s తో రూపని భాగస్వామ్యం చేయాలా?</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">మీ రూపం సమాచారాన్ని సులభంగా పంచుకోవాలంటే సందేశం పంపినవారిని కాంటాక్ట్స్ లో జత చేయండి. మీరు కోరుకుంటే, మీరు ఇప్పటికీ మీరూపం సమాచారాన్ని ఈ విధంగా పంచుకోవచ్చు.</string>
-  <string name="UnknownSenderView_share_profile">రూపం పంచు</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">%s ని నిరోధించాల?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">నిరోధించబడిన పరిచయాలు ఇకపై మీకు సందేశాలను పంపలేవు మరియు మీకు కాల్ చేయలేవు.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">నిరోధించు</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">%s తో రూపని భాగస్వామ్యం చేయాలా?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">మీ రూపం సమాచారాన్ని సులభంగా పంచుకోవాలంటే సందేశం పంపినవారిని కాంటాక్ట్స్ లో జత చేయండి. మీరు కోరుకుంటే, మీరు ఇప్పటికీ మీరూపం సమాచారాన్ని ఈ విధంగా పంచుకోవచ్చు.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">రూపం పంచు</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">సందేశం పంపాల?</string>
   <string name="UntrustedSendDialog_send">పంపుము</string>
@@ -1249,7 +1249,7 @@
   </plurals>
   <string name="GroupUtil_group_name_is_now">ఇప్పుడు సమూహం పేరు \'%1$s\' ఉంది.</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">ఈ గ్రూపుకు మీ రూపం పేరు మరియు చిత్రం  కనిపించేలా చేయాలా?</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">ఈ గ్రూపుకు మీ రూపం పేరు మరియు చిత్రం  కనిపించేలా చేయాలా?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">అన్లాక్</string>
   <!--prompt_mms_activity-->
