--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -90,8 +90,10 @@
   <string name="AttachmentUploadJob_compressing_video_start">جاري ضغط الفيديو…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">خطأ في تشغيل الصوت!</string>
-  <!--BlockedContactsActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">جهات الاتصال المحظورة</string> -->
+  <!--BlockedUsersActivity-->
+  <string name="BlockedUsersActivity__blocked_users_will">لن يتمكن المستخدم المحظور من الاتصال بك أو بعث الرسائل إليك.</string>
+  <string name="BlockedUsersActivity__block">حظر</string>
+  <string name="BlockedUsersActivity__unblock">رفع الحظر</string>
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">حظر و مغادرة %1$s؟</string>
   <string name="BlockUnblockDialog_block_s">حظر %1$s؟</string>
@@ -489,6 +491,9 @@
   <string name="GroupManagement_learn_more">لمعرفة المزيد</string>
   <string name="GroupManagement_invite_multiple_users">لا يمكن إضافة هؤلاء المستخدمين تلقائياً إلى هذه المجموعة من قبلك. \n\n لقد تمت دعوتهم للانضمام، ولن يروا أيّة رسالة من رسائل المجموعة حتى يقبلون.</string>
   <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
+  <!--GroupsV1MigrationSuggestionsReminder-->
+  <string name="GroupsV1MigrationSuggestionsReminder_not_now">ليس الآن</string>
+  <!--GroupsV1MigrationSuggestionsDialog-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">ترك المجموعة؟</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">لن تتمكن من إرسال أو استقبال رسائل في هذه المجموعة بعد اﻵن.</string>
@@ -1151,6 +1156,10 @@
   <!--WebRtcCallView-->
   <string name="WebRtcCallView__signal_voice_call">مكالمة صوتية على Signal…</string>
   <string name="WebRtcCallView__signal_video_call">مكالمة فيديو على Signal….</string>
+  <string name="WebRtcCallView__connecting">جار الرّبط…</string>
+  <string name="WebRtcCallView__reconnecting">إعادة الاتصال..</string>
+  <string name="WebRtcCallView__disconnected">غير متّصل</string>
+  <string name="WebRtcCallView__no_one_else_is_here">لا يوجد أحد هنا</string>
   <!--CallParticipantsListDialog-->
   <!--RegistrationActivity-->
   <string name="RegistrationActivity_select_your_country">اختر بلدك</string>
@@ -1319,12 +1328,12 @@
   <string name="UpdateApkReadyListener_Signal_update">تحديث Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">إصدار جديد لـ Signal متوفر، أنقر للتحديث</string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">هل تود حظر %s ؟</string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">لن تتمكّن جهات الاتصال المحظورة من مراسلتك أو الإتصال بك.</string>
-  <string name="UnknownSenderView_block">حظر</string>
-  <string name="UnknownSenderView_share_profile_with_s">هل تود مشاركة الملف الشخصي مع %s ؟</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">أسهل طريقة لمشاركة بيانات حسابك هي إضافة المرسل إلى جهات الاتصال. إن لم ترغبوا في ذلك، يمكنكم مشاركة بيانات الملف الشخصي بهذه الطريقة.</string>
-  <string name="UnknownSenderView_share_profile">مشاركة الملف الشخصي</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">هل تود حظر %s ؟</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">لن تتمكّن جهات الاتصال المحظورة من مراسلتك أو الإتصال بك.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">حظر</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">هل تود مشاركة الملف الشخصي مع %s ؟</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">أسهل طريقة لمشاركة بيانات حسابك هي إضافة المرسل إلى جهات الاتصال. إن لم ترغبوا في ذلك، يمكنكم مشاركة بيانات الملف الشخصي بهذه الطريقة.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">مشاركة الملف الشخصي</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">هل تود إرسال الرسالة ؟</string>
   <string name="UntrustedSendDialog_send">أرسل</string>
@@ -1727,7 +1736,7 @@
   </plurals>
   <string name="GroupUtil_group_name_is_now">أسم المجموعة الآن \'%1$s\'.</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">هل تود عرض اسمك وصورتك في الملف الشخصي لهذه المجموعة ؟</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">هل تود عرض اسمك وصورتك في الملف الشخصي لهذه المجموعة ؟</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">فتح القفل</string>
   <!--prompt_mms_activity-->
@@ -1956,7 +1965,6 @@
   <string name="preferences__typing_indicators">مؤشرات الطباعة</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">اذا تم الغاء تفعيل المؤشر على الطباعة، فلن يمكنك كذلك رؤية مؤشر عند قيام الآخرين بالطّباعة.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">الطلب من لوحة المفاتيح تعطيل التعليم الذاتي</string>
-  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">جهات الاتصال المحظورة</string> -->
   <string name="preferences_chats__when_using_mobile_data">عند استخدام بيانات الجوّال</string>
   <string name="preferences_chats__when_using_wifi">عند استخدام واي فاي</string>
   <string name="preferences_chats__when_roaming">عند استخدام التجوال</string>
