--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -661,12 +661,12 @@
   <string name="UpdateApkReadyListener_Signal_update">Обновление на Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Има нова версия на Signal, натиснете, за да обновите.</string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">Блокирай %s?</string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Блокираните контакти няма да могат да Ви изпращат съобщения или да Ви се обаждат.</string>
-  <string name="UnknownSenderView_block">Блокиране</string>
-  <string name="UnknownSenderView_share_profile_with_s">Споделяне на профила с %s?</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Най-лесният начин за споделяне на профилната информация е да добавите изпращача в своите контакти. Ако не желаете да направите това, все още може да споделяте профилната си информация и по този начин.</string>
-  <string name="UnknownSenderView_share_profile">Споделяне на профила</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">Блокирай %s?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Блокираните контакти няма да могат да Ви изпращат съобщения или да Ви се обаждат.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">Блокиране</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">Споделяне на профила с %s?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Най-лесният начин за споделяне на профилната информация е да добавите изпращача в своите контакти. Ако не желаете да направите това, все още може да споделяте профилната си информация и по този начин.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">Споделяне на профила</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">Изпращане на съобщение?</string>
   <string name="UntrustedSendDialog_send">Изпращане</string>
@@ -963,7 +963,7 @@
   </plurals>
   <string name="GroupUtil_group_name_is_now">Името на групата вече е \'%1$s\'.</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Направете профилното си име и снимка видими за тази група?</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Направете профилното си име и снимка видими за тази група?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">Отключи</string>
   <!--prompt_mms_activity-->
