--- a/app/src/main/res/values-cy/strings.xml
+++ b/app/src/main/res/values-cy/strings.xml
@@ -85,8 +85,10 @@
   <string name="AttachmentUploadJob_compressing_video_start">Cywasgu fideo…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Gwall chwarae sain!</string>
-  <!--BlockedContactsActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">Cysylltiadau wedi\'u rhwystro</string> -->
+  <!--BlockedUsersActivity-->
+  <string name="BlockedUsersActivity__blocked_users_will">Ni fydd defnyddwyr wedi\'u rhwystro yn gallu eich galw nac anfon negeseuon atoch.</string>
+  <string name="BlockedUsersActivity__block">Rhwystro</string>
+  <string name="BlockedUsersActivity__unblock">Dadrwystro</string>
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">Rhwystro a gadael %1$s?</string>
   <string name="BlockUnblockDialog_block_s">Rhwystro %1$s?</string>
@@ -491,6 +493,9 @@ Send neges heb ei ddiogelu?</string>
   <string name="GroupsV1MigrationLearnMore_what_are_new_groups">Beth yw Grwpiau Newydd?</string>
   <string name="GroupsV1MigrationLearnMore_new_groups_have_features_like_mentions">Mae gan Grwpiau Newydd nodweddion fel @crybwyll a gewinyddwyr grwpiau, a byddant â nodweddion ychwanegol yn y dyfodol.</string>
   <string name="GroupsV1MigrationLearnMore_all_message_history_and_media_has_been_kept">Mae holl hanes negeseuon a chyfryngau o cyn uwchraddio wedi\'u cadw.</string>
+  <!--GroupsV1MigrationSuggestionsReminder-->
+  <string name="GroupsV1MigrationSuggestionsReminder_not_now">Nid nawr</string>
+  <!--GroupsV1MigrationSuggestionsDialog-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Gadael y grŵp?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Ni fyddwch yn gallu anfon na derbyn negeseuon yn y grŵp hwn mwyach.</string>
@@ -1182,9 +1187,13 @@ Send neges heb ei ddiogelu?</string>
   <string name="WebRtcCallView__signal_voice_call">Galwad llais Signal…</string>
   <string name="WebRtcCallView__signal_video_call">Galwad fideo Signal</string>
   <string name="WebRtcCallView__start_call">Cychwyn Galwad</string>
-  <!-- Removed by excludeNonTranslatables <string name="WebRtcCallView__group_call">Galwad Grŵp</string> -->
+  <string name="WebRtcCallView__join_call">Ymuno â\'r Alwad</string>
   <string name="WebRtcCallView__view_participants_list">Gweld cyfranogwyr</string>
   <string name="WebRtcCallView__your_video_is_off">Mae\'ch fideo i ffwrdd</string>
+  <string name="WebRtcCallView__connecting">Yn cysylltu</string>
+  <string name="WebRtcCallView__reconnecting">Yn Ailgysylltu…</string>
+  <string name="WebRtcCallView__disconnected">Datgysylltwyd</string>
+  <string name="WebRtcCallView__no_one_else_is_here">Does neb arall yma</string>
   <!--CallParticipantsListDialog-->
   <plurals name="CallParticipantsListDialog_in_this_call_d_people">
     <item quantity="one">Yn yr alwad hon · %1$d person</item>
@@ -1362,12 +1371,12 @@ Send neges heb ei ddiogelu?</string>
   <string name="UpdateApkReadyListener_Signal_update">Diweddariad Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Mae fersiwn newydd o Signal ar gael. Tapiwch i ddiweddaru</string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">Rhwystro %s?</string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Ni fydd yn bosib i gysylltiadau wedi\'u rhwystro anfon negeseuon atoch neu eich ffonio.</string>
-  <string name="UnknownSenderView_block">Rhwystro</string>
-  <string name="UnknownSenderView_share_profile_with_s">Rhannu proffil gyda %s?</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Y ffordd hawsaf o rannu eich manylion proffil yw ychwanegu\'r anfonwr i\'ch cysylltiadau. Os nad ydych yn dymuno, gallwch barhau i rannu\'ch manylion proffil fel hyn.</string>
-  <string name="UnknownSenderView_share_profile">Rhannu proffil</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">Rhwystro %s?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Ni fydd yn bosib i gysylltiadau wedi\'u rhwystro anfon negeseuon atoch neu eich ffonio.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">Rhwystro</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">Rhannu proffil gyda %s?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Y ffordd hawsaf o rannu eich manylion proffil yw ychwanegu\'r anfonwr i\'ch cysylltiadau. Os nad ydych yn dymuno, gallwch barhau i rannu\'ch manylion proffil fel hyn.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">Rhannu proffil</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">Anfon neges?</string>
   <string name="UntrustedSendDialog_send">Anfon</string>
@@ -1766,7 +1775,7 @@ Send neges heb ei ddiogelu?</string>
   </plurals>
   <string name="GroupUtil_group_name_is_now">Enw\'r grŵp nawr yw \'%1$s\'.</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Gwneud eich enw a llun proffil yn weladwy i\'r grŵp hwn?</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Gwneud eich enw a llun proffil yn weladwy i\'r grŵp hwn?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">Datgloi</string>
   <!--prompt_mms_activity-->
@@ -1994,7 +2003,6 @@ Send neges heb ei ddiogelu?</string>
   <string name="preferences__typing_indicators">Dangosyddion Teipio</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Os yw dangosyddion teipio wedi eu hanalluogi, fyddwch chi ddim yn gweld dangosyddion teipio pobl eraill.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Gofyn i\'r bysellfwrdd analluogi dysgu personol</string>
-  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">Cysylltiadau wedi\'u rhwystro</string> -->
   <string name="preferences_chats__when_using_mobile_data">Wrth ddefnyddio data symudol</string>
   <string name="preferences_chats__when_using_wifi">Wrth ddefnyddio diwifr</string>
   <string name="preferences_chats__when_roaming">Wrth grwydro</string>
