--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -79,8 +79,17 @@
   <string name="AttachmentUploadJob_compressing_video_start">Video wird komprimiert …</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Fehler bei der Audiowiedergabe</string>
-  <!--BlockedContactsActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">Blockierte Kontakte</string> -->
+  <!--BlockedUsersActivity-->
+  <string name="BlockedUsersActivity__blocked_users">Blockierte Benutzer</string>
+  <string name="BlockedUsersActivity__add_blocked_user">Nutzer blockieren</string>
+  <string name="BlockedUsersActivity__blocked_users_will">Blockierte Benutzer werden dich nicht anrufen oder dir Nachrichten senden können.</string>
+  <string name="BlockedUsersActivity__no_blocked_users">Keine blockierten Benutzer</string>
+  <string name="BlockedUsersActivity__block_user">Benutzer blockieren?</string>
+  <string name="BlockedUserActivity__s_will_not_be_able_to">»%1$s« wird dich nicht anrufen oder dir Nachrichten senden können.</string>
+  <string name="BlockedUsersActivity__block">Blockieren</string>
+  <string name="BlockedUsersActivity__unblock_user">Benutzer freigeben?</string>
+  <string name="BlockedUsersActivity__do_you_want_to_unblock_s">Möchstest du »%1$s« freigeben?</string>
+  <string name="BlockedUsersActivity__unblock">Freigeben</string>
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">%1$s blockieren und verlassen?</string>
   <string name="BlockUnblockDialog_block_s">%1$s blockieren?</string>
@@ -465,9 +474,40 @@
     <item quantity="one">Dieses Mitglied muss eine Einladung zum erneuten Gruppenbeitritt annehmen und wird bis dahin keine Gruppennachrichten erhalten:</item>
     <item quantity="other">Diese Mitglieder müssen eine Einladung zum erneuten Gruppenbeitritt annehmen und werden bis dahin keine Gruppennachrichten erhalten:</item>
   </plurals>
-  <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
+  <!-- Removed by excludeNonTranslatables <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
     <item quantity="one">Dieses Mitglied kann Gruppen neuen Typs nicht beitreten und wurde daher aus der Gruppe entfernt:</item>
     <item quantity="other">Diese Mitglieder können Gruppen neuen Typs nicht beitreten und wurden daher aus der Gruppe entfernt:</item>
+  </plurals> -->
+  <!--GroupsV1MigrationSuggestionsReminder-->
+  <plurals name="GroupsV1MigrationSuggestionsReminder_members_couldnt_be_added_to_the_new_group">
+    <item quantity="one">%1$d Mitglied konnte der Gruppe neuen Typs nicht hinzugefügt werden. Möchtest du dieses jetzt hinzufügen?</item>
+    <item quantity="other">%1$d Mitglieder konnten der Gruppe neuen Typs nicht hinzugefügt werden. Möchtest du diese jetzt hinzufügen?</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsReminder_add_members">
+    <item quantity="one">Mitglied hinzufügen</item>
+    <item quantity="other">Mitglieder hinzufügen</item>
+  </plurals>
+  <string name="GroupsV1MigrationSuggestionsReminder_not_now">Jetzt nicht</string>
+  <!--GroupsV1MigrationSuggestionsDialog-->
+  <plurals name="GroupsV1MigrationSuggestionsDialog_add_members_question">
+    <item quantity="one">Mitglied hinzufügen?</item>
+    <item quantity="other">Mitglieder hinzufügen?</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsDialog_these_members_couldnt_be_automatically_added">
+    <item quantity="one">Dieses Mitglied konnte während der Aktualisierung zu einer Gruppe neuen Typs nicht automatisch hinzugefügt werden:</item>
+    <item quantity="other">Diese Mitglieder konnten während der Aktualisierung zu einer Gruppe neuen Typs nicht automatisch hinzugefügt werden:</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsDialog_add_members">
+    <item quantity="one">Mitglied hinzufügen</item>
+    <item quantity="other">Mitglieder hinzufügen</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsDialog_failed_to_add_members_try_again_later">
+    <item quantity="one">Mitglied konnte nicht hinzugefügt werden. Versuche es später erneut.</item>
+    <item quantity="other">Mitglieder konnten nicht hinzugefügt werden. Versuche es später erneut.</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsDialog_cannot_add_members">
+    <item quantity="one">Mitglieder kann nicht hinzugefügt werden.</item>
+    <item quantity="other">Mitglieder können nicht hinzugefügt werden.</item>
   </plurals>
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Gruppe verlassen?</string>
@@ -1107,9 +1147,21 @@
   <string name="WebRtcCallView__signal_voice_call">Signal-Sprachanruf …</string>
   <string name="WebRtcCallView__signal_video_call">Signal-Videoanruf …</string>
   <string name="WebRtcCallView__start_call">Anruf starten</string>
-  <!-- Removed by excludeNonTranslatables <string name="WebRtcCallView__group_call">Gruppenanruf</string> -->
+  <string name="WebRtcCallView__join_call">Anruf beitreten</string>
+  <string name="WebRtcCallView__s_group_call">»%1$s« Gruppenanruf</string>
   <string name="WebRtcCallView__view_participants_list">Teilnehmer anzeigen</string>
   <string name="WebRtcCallView__your_video_is_off">Dein Video ist aus</string>
+  <string name="WebRtcCallView__connecting">Verbindung wird hergestellt …</string>
+  <string name="WebRtcCallView__reconnecting">Neu verbinden …</string>
+  <string name="WebRtcCallView__joining">Beitreten …</string>
+  <string name="WebRtcCallView__disconnected">Keine Serververbindung</string>
+  <string name="WebRtcCallView__no_one_else_is_here">Niemand anderes ist hier</string>
+  <string name="WebRtcCallView__s_is_in_this_call">%1$s nimmt an diesem Anruf teil</string>
+  <string name="WebRtcCallView__s_and_s_are_in_this_call">%1$s und %2$s nehmen an diesem Anruf teil</string>
+  <plurals name="WebRtcCallView__s_s_and_d_others_are_in_this_call">
+    <item quantity="one">%1$s, %2$s und %3$d Weiterer nehmen an diesem Anruf teil</item>
+    <item quantity="other">%1$s, %2$s und %3$d Weitere nehmen an diesem Anruf teil</item>
+  </plurals>
   <!--CallParticipantsListDialog-->
   <plurals name="CallParticipantsListDialog_in_this_call_d_people">
     <item quantity="one">In diesem Anruf · %1$d Person</item>
@@ -1274,12 +1326,12 @@ Schlüsselaustausch-Nachricht für eine ungültige Protokollversion empfangen</s
   <string name="UpdateApkReadyListener_Signal_update">Signal-Aktualisierung</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Eine neue Signal-Version ist verfügbar. Zum Aktualisieren antippen.</string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">%s blockieren?</string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Blockierte Kontakte können dir keine Nachrichten senden und dich nicht anrufen.</string>
-  <string name="UnknownSenderView_block">Blockieren</string>
-  <string name="UnknownSenderView_share_profile_with_s">Profil mit %s teilen?</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Der einfachste Weg zum Teilen deiner Profilinformationen ist das Hinzufügen des Absenders zu deinen Kontakten. Falls du das nicht möchtest, kannst du deine Profilinformationen auch auf diese Weise teilen.</string>
-  <string name="UnknownSenderView_share_profile">Profil teilen</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">%s blockieren?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Blockierte Kontakte können dir keine Nachrichten senden und dich nicht anrufen.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">Blockieren</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">Profil mit %s teilen?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Der einfachste Weg zum Teilen deiner Profilinformationen ist das Hinzufügen des Absenders zu deinen Kontakten. Falls du das nicht möchtest, kannst du deine Profilinformationen auch auf diese Weise teilen.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">Profil teilen</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">Nachricht senden?</string>
   <string name="UntrustedSendDialog_send">Senden</string>
@@ -1659,7 +1711,7 @@ Schlüsselaustausch-Nachricht für eine ungültige Protokollversion empfangen</s
   </plurals>
   <string name="GroupUtil_group_name_is_now">Gruppenname lautet jetzt »%1$s«.</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Hier antippen, um deinen Profilnamen und dein Profilfoto für diese Gruppe sichtbar zu machen</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Hier antippen, um deinen Profilnamen und dein Profilfoto für diese Gruppe sichtbar zu machen</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">Entsperren</string>
   <!--prompt_mms_activity-->
@@ -1885,7 +1937,7 @@ Schlüsselaustausch-Nachricht für eine ungültige Protokollversion empfangen</s
   <string name="preferences__typing_indicators">Tipp-Indikatoren</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Bei deaktivierten Tipp-Indikatoren kannst du auch die Tipp-Indikatoren anderer nicht sehen</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Tastatur auffordern, personalisiertes Lernen auszuschalten</string>
-  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">Blockierte Kontakte</string> -->
+  <string name="preferences_app_protection__blocked_users">Blockierte Benutzer</string>
   <string name="preferences_chats__when_using_mobile_data">Bei mobiler Datenverbindung</string>
   <string name="preferences_chats__when_using_wifi">Bei WLAN-Verbindung</string>
   <string name="preferences_chats__when_roaming">Bei Roaming</string>
@@ -1948,6 +2000,7 @@ Schlüsselaustausch-Nachricht für eine ungültige Protokollversion empfangen</s
   <!--****************************************-->
   <!--contact_selection_list-->
   <string name="contact_selection_list__unknown_contact">Neue Nachricht an …</string>
+  <string name="contact_selection_list__unknown_contact_block">Benutzer blockieren</string>
   <string name="contact_selection_list__unknown_contact_add_to_group">Zur Gruppe hinzufügen</string>
   <!--conversation_callable_insecure-->
   <string name="conversation_callable_insecure__menu_call">Anruf</string>
@@ -2359,6 +2412,9 @@ Schlüsselaustausch-Nachricht für eine ungültige Protokollversion empfangen</s
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s an %2$s</string>
   <!--StorageUtil-->
   <string name="StorageUtil__s_s">%1$s/%2$s</string>
+  <string name="BlockedUsersActivity__s_has_been_blocked">»%1$s« wurde blockiert.</string>
+  <string name="BlockedUsersActivity__failed_to_block_s">»%1$s« konnte nicht blockiert werden.</string>
+  <string name="BlockedUsersActivity__s_has_been_unblocked">»%1$s« wurde freigegeben.</string>
   <!--ReviewCardDialogFragment-->
   <string name="ReviewCardDialogFragment__review_members">Mitglieder prüfen</string>
   <string name="ReviewCardDialogFragment__review_request">Anfrage prüfen</string>
