--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -79,8 +79,10 @@
   <string name="AttachmentUploadJob_compressing_video_start">Το βίντεο συμπιέζεται…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Σφάλμα κατά την αναπαραγωγή ήχου!</string>
-  <!--BlockedContactsActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">Φραγμένες επαφές</string> -->
+  <!--BlockedUsersActivity-->
+  <string name="BlockedUsersActivity__blocked_users_will">Οι φραγμένοι χρήστες δεν θα μπορούν να σε καλέσουν ή να σου στείλουν μηνύματα.</string>
+  <string name="BlockedUsersActivity__block">Φραγή</string>
+  <string name="BlockedUsersActivity__unblock">Κατάργηση φραγής</string>
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">Φραγή και αποχώρηση από %1$s;</string>
   <string name="BlockUnblockDialog_block_s">Φραγή του/της %1$s;</string>
@@ -465,10 +467,13 @@
     <item quantity="one">Αυτό το μέλος θα πρέπει να αποδεχτεί την πρόσκληση να ξαναμπεί στην ομάδα, και δεν θα λαμβάνει τα μηνύματα της ομάδας μέχρι να αποδεχτεί:</item>
     <item quantity="other">Αυτά τα μέλη θα πρέπει να αποδεχτούν την πρόσκληση να ξαναμπούν στην ομάδα, και δεν θα λαμβάνουν τα μηνύματα της ομάδας μέχρι να αποδεχτούν:</item>
   </plurals>
-  <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
+  <!-- Removed by excludeNonTranslatables <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
     <item quantity="one">Αυτό το μέλος δεν μπορεί να μπει σε Ομάδες νέου τύπου, και αφαιρέθηκε από την ομάδα.</item>
     <item quantity="other">Αυτά τα μέλη δεν μπορούν να μπουν σε Ομάδες νέου τύπου, και αφαιρέθηκαν από την ομάδα.</item>
-  </plurals>
+  </plurals> -->
+  <!--GroupsV1MigrationSuggestionsReminder-->
+  <string name="GroupsV1MigrationSuggestionsReminder_not_now">Όχι τώρα</string>
+  <!--GroupsV1MigrationSuggestionsDialog-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Αποχώρηση απ\' την ομάδα;</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Δε θα μπορείς πια να στείλεις ή να λάεις μηνύματα σε αυτήν την ομάδα.</string>
@@ -1108,9 +1113,13 @@
   <string name="WebRtcCallView__signal_voice_call">Κλήση φωνής Signal…</string>
   <string name="WebRtcCallView__signal_video_call">Βιντεοκλήση Signal…</string>
   <string name="WebRtcCallView__start_call">Έναρξη κλήσης</string>
-  <!-- Removed by excludeNonTranslatables <string name="WebRtcCallView__group_call">Ομαδική κλήση</string> -->
+  <string name="WebRtcCallView__join_call">Είσοδος στην κλήση</string>
   <string name="WebRtcCallView__view_participants_list">Προβολή συμμετέχοντων</string>
   <string name="WebRtcCallView__your_video_is_off">Το βίντεό σου είναι απενεργοποιημένο</string>
+  <string name="WebRtcCallView__connecting">Συνδέεται…</string>
+  <string name="WebRtcCallView__reconnecting">Επανασύνδεση…</string>
+  <string name="WebRtcCallView__disconnected">Αποσυνδέθηκε</string>
+  <string name="WebRtcCallView__no_one_else_is_here">Δεν είναι κανένας άλλος εδώ</string>
   <!--CallParticipantsListDialog-->
   <plurals name="CallParticipantsListDialog_in_this_call_d_people">
     <item quantity="one">Σε αυτή τη κλήση · %1$d άτομο</item>
@@ -1280,12 +1289,12 @@
   <string name="UpdateApkReadyListener_Signal_update">Αναβάθμιση Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Μια νέα έκδοση του Signal είναι διαθέσιμη, πάτα για αναβάθμιση</string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">Φραγή του/της %s; </string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Οι φραγμένες επαφές δε θα μπορούν πια να σου στέλνουν μηνύματα ή να σε καλούν.</string>
-  <string name="UnknownSenderView_block">Φραγή</string>
-  <string name="UnknownSenderView_share_profile_with_s">Να μοιραστείς το προφίλ με τον/την %s;</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Ο πιο εύκολος τρόπος για να μοιραστείς τις πληροφορίες προφίλ σου είναι να προσθέσεις τον/την αποστολέα στις επαφές σου. Αν δεν το επιθυμείς, μπορείς και πάλι να μοιραστείς τις πληροφορίες προφίλ σου με αυτό τον τρόπο.</string>
-  <string name="UnknownSenderView_share_profile">Μοιράσου το προφίλ</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">Φραγή του/της %s; </string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Οι φραγμένες επαφές δε θα μπορούν πια να σου στέλνουν μηνύματα ή να σε καλούν.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">Φραγή</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">Να μοιραστείς το προφίλ με τον/την %s;</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Ο πιο εύκολος τρόπος για να μοιραστείς τις πληροφορίες προφίλ σου είναι να προσθέσεις τον/την αποστολέα στις επαφές σου. Αν δεν το επιθυμείς, μπορείς και πάλι να μοιραστείς τις πληροφορίες προφίλ σου με αυτό τον τρόπο.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">Μοιράσου το προφίλ</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">Αποστολή μηνύματος;</string>
   <string name="UntrustedSendDialog_send">Αποστολή</string>
@@ -1665,7 +1674,7 @@
   </plurals>
   <string name="GroupUtil_group_name_is_now">Η ομάδα λέγεται πλέον \'%1$s\'.</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Να γίνει το όνομα και η φωτογραφία προφίλ σου ορατή σε αυτή την ομάδα;</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Να γίνει το όνομα και η φωτογραφία προφίλ σου ορατή σε αυτή την ομάδα;</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">Ξεκλείδωμα</string>
   <!--prompt_mms_activity-->
@@ -1891,7 +1900,6 @@
   <string name="preferences__typing_indicators">Δείκτες πληκτρολόγησης</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Αν οι δείκτες πληκτρολόγησης είναι απενεργοποιημένοι, δε θα μπορείς να δεις δείκτες πληκτρολόγησης από άλλους/ες.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Αίτηση πληκτρολογίου για να απενεργοποιηθεί η προσωποποιημένη εκμάθηση</string>
-  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">Φραγμένες επαφές</string> -->
   <string name="preferences_chats__when_using_mobile_data">Όταν χρησιμοποιούνται δεδομένα</string>
   <string name="preferences_chats__when_using_wifi">Όταν χρησιμοποιείται WiFi</string>
   <string name="preferences_chats__when_roaming">Κατά το roaming</string>
