--- a/app/src/main/res/values-eo/strings.xml
+++ b/app/src/main/res/values-eo/strings.xml
@@ -79,8 +79,9 @@
   <string name="AttachmentUploadJob_compressing_video_start">Densigo de la videaĵo…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Eraro dum ludo de sonaĵo!</string>
-  <!--BlockedContactsActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">Blokataj kontaktoj</string> -->
+  <!--BlockedUsersActivity-->
+  <string name="BlockedUsersActivity__block">Bloki</string>
+  <string name="BlockedUsersActivity__unblock">Malbloki</string>
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">Ĉu bloki kaj forlasi %1$s?</string>
   <string name="BlockUnblockDialog_block_s">Ĉu bloki %1$s?</string>
@@ -454,6 +455,9 @@
   <string name="GroupManagement_learn_more">Scii pli</string>
   <string name="GroupManagement_invite_multiple_users">Vi ne povas aŭtomate aldoni tiujn uzantoj al tiu grupo.\n\nIli estis invititaj kaj ne vidos iujn grupmesaĝojn, antaŭ ol ili akceptas la inviton.</string>
   <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
+  <!--GroupsV1MigrationSuggestionsReminder-->
+  <string name="GroupsV1MigrationSuggestionsReminder_not_now">Ne nun</string>
+  <!--GroupsV1MigrationSuggestionsDialog-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Ĉu forlasi grupon?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Vi ne plu povos ricevi aŭ sendi mesaĝojn en tiu grupo.</string>
@@ -1087,9 +1091,10 @@
   <string name="WebRtcCallView__signal_voice_call">Signal-voĉalvoko…</string>
   <string name="WebRtcCallView__signal_video_call">Signal-vidalvoko…</string>
   <string name="WebRtcCallView__start_call">Ekalvoki</string>
-  <!-- Removed by excludeNonTranslatables <string name="WebRtcCallView__group_call">Grup-alvoko</string> -->
   <string name="WebRtcCallView__view_participants_list">Vidi partoprenantojn</string>
   <string name="WebRtcCallView__your_video_is_off">Via kamerao estas malŝaltita</string>
+  <string name="WebRtcCallView__connecting">Konekto…</string>
+  <string name="WebRtcCallView__disconnected">Nekonektite</string>
   <!--CallParticipantsListDialog-->
   <plurals name="CallParticipantsListDialog_in_this_call_d_people">
     <item quantity="one">En tiu ĉi alvoko ⋅ %1$d homo</item>
@@ -1262,12 +1267,12 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="UpdateApkReadyListener_Signal_update">Ĝisdatigo de Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Nova versio de Signal disponeblas, tuŝetu por ĝisdatigi</string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">Ĉu bloki %s?</string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Blokitaj kontaktoj ne plu eblos sendi al vi mesaĝojn aŭ alvoki vin.</string>
-  <string name="UnknownSenderView_block">Bloki</string>
-  <string name="UnknownSenderView_share_profile_with_s">Ĉu kunhavigi profilon kun %s?</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">La plej facila maniero sendi viajn profilinformojn estas per aldono de la sendinto al via kontaktaro. Se tion vi ne volas, vi tamen povas kunhavigi viajn profilinformojn tiumaniere.</string>
-  <string name="UnknownSenderView_share_profile">Kunhavigi profilon</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">Ĉu bloki %s?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Blokitaj kontaktoj ne plu eblos sendi al vi mesaĝojn aŭ alvoki vin.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">Bloki</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">Ĉu kunhavigi profilon kun %s?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">La plej facila maniero sendi viajn profilinformojn estas per aldono de la sendinto al via kontaktaro. Se tion vi ne volas, vi tamen povas kunhavigi viajn profilinformojn tiumaniere.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">Kunhavigi profilon</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">Ĉu sendi mesaĝon?</string>
   <string name="UntrustedSendDialog_send">Sendi</string>
@@ -1646,7 +1651,7 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   </plurals>
   <string name="GroupUtil_group_name_is_now">La grupnomo estas nun „%1$s“.</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Ĉu vidigi viajn profilajn nomon kaj foton al tiu ĉi grupo?</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Ĉu vidigi viajn profilajn nomon kaj foton al tiu ĉi grupo?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">Malŝlosi</string>
   <!--prompt_mms_activity-->
@@ -1872,7 +1877,6 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="preferences__typing_indicators">Tajp-indikiloj</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Se tajp-indikiloj ne estas ŝaltitaj, vi ne vidos aliulajn tajp-indikilojn.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Peti al la klavaro malŝalti personan lernadon</string>
-  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">Blokataj kontaktoj</string> -->
   <string name="preferences_chats__when_using_mobile_data">Kiam uziĝas sendrataj datumoj</string>
   <string name="preferences_chats__when_using_wifi">Kiam uziĝas vifio</string>
   <string name="preferences_chats__when_roaming">Dum retmigrado</string>
