--- a/app/src/main/res/values-et/strings.xml
+++ b/app/src/main/res/values-et/strings.xml
@@ -79,8 +79,10 @@
   <string name="AttachmentUploadJob_compressing_video_start">Video tihendamine…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Heli esitamisel tekkis viga!</string>
-  <!--BlockedContactsActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">Blokeeritud kontaktid</string> -->
+  <!--BlockedUsersActivity-->
+  <string name="BlockedUsersActivity__blocked_users_will">Blokeeritud kasutajatel pole võimalik sulle helistada ega sõnumeid saata.</string>
+  <string name="BlockedUsersActivity__block">Blokeeri</string>
+  <string name="BlockedUsersActivity__unblock">Eemalda blokeering</string>
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">Kas blokeerida ja lahkuda %1$s?</string>
   <string name="BlockUnblockDialog_block_s">Kas blokeerida %1$s?</string>
@@ -444,6 +446,9 @@
   <string name="GroupManagement_learn_more">Rohkem infot</string>
   <string name="GroupManagement_invite_multiple_users">Neid kasutajaid ei saa sinu poolt automaatselt gruppi lisada.\n\nNad on kutsutud grupiga ühinema ja ei näe grupi sõnumeid enne kui on ühinemisega nõustunud.</string>
   <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
+  <!--GroupsV1MigrationSuggestionsReminder-->
+  <string name="GroupsV1MigrationSuggestionsReminder_not_now">Mitte praegu</string>
+  <!--GroupsV1MigrationSuggestionsDialog-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Lahkud grupist?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Sul pole enam võimalik saata ega saada selle grupi sõnumeid.</string>
@@ -1025,9 +1030,13 @@
   <string name="WebRtcCallView__signal_voice_call">Signal-i häälkõne…</string>
   <string name="WebRtcCallView__signal_video_call">Signal-i videokõne…</string>
   <string name="WebRtcCallView__start_call">Alusta kõnet</string>
-  <!-- Removed by excludeNonTranslatables <string name="WebRtcCallView__group_call">Grupikõne</string> -->
+  <string name="WebRtcCallView__join_call">Ühine kõnega</string>
   <string name="WebRtcCallView__view_participants_list">Vaata osalejaid</string>
   <string name="WebRtcCallView__your_video_is_off">Sinu video on väljas</string>
+  <string name="WebRtcCallView__connecting">Ühendumine…</string>
+  <string name="WebRtcCallView__reconnecting">Ühenduse taastamine…</string>
+  <string name="WebRtcCallView__disconnected">Ühendus katkestatud</string>
+  <string name="WebRtcCallView__no_one_else_is_here">Kedagi teist pole siin</string>
   <!--CallParticipantsListDialog-->
   <plurals name="CallParticipantsListDialog_in_this_call_d_people">
     <item quantity="one">Selles kõnes · %1$d inimene</item>
@@ -1200,12 +1209,12 @@
   <string name="UpdateApkReadyListener_Signal_update">Signali uuendus</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Uus Signali versioon on saadaval, koputa uuendamiseks</string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">Blokeeri %s?</string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Blokeeritud kontaktid ei saa enam sulle sõnumeid saata ega helistada.</string>
-  <string name="UnknownSenderView_block">Blokeeri</string>
-  <string name="UnknownSenderView_share_profile_with_s">Jagad profiili kontaktiga %s?</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Lihtsaim viis oma profiiliinfot jagada on saatja kontaktidesse lisada. Kui sa seda ei soovi, saad siiski sel viisil oma profiiliinfot jagada.</string>
-  <string name="UnknownSenderView_share_profile">Jaga profiili</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">Blokeeri %s?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Blokeeritud kontaktid ei saa enam sulle sõnumeid saata ega helistada.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">Blokeeri</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">Jagad profiili kontaktiga %s?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Lihtsaim viis oma profiiliinfot jagada on saatja kontaktidesse lisada. Kui sa seda ei soovi, saad siiski sel viisil oma profiiliinfot jagada.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">Jaga profiili</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">Saadad sõnumi?</string>
   <string name="UntrustedSendDialog_send">Saada</string>
@@ -1579,7 +1588,7 @@
   </plurals>
   <string name="GroupUtil_group_name_is_now">Grupi nimi on nüüd \"%1$s\".</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Teed oma profiilinime ja -pildi sellele grupile nähtavaks?</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Teed oma profiilinime ja -pildi sellele grupile nähtavaks?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">Eemalda blokeering</string>
   <!--prompt_mms_activity-->
@@ -1805,7 +1814,6 @@
   <string name="preferences__typing_indicators">Kirjutamisindikaatorid</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Kui kirjutamisindikaatorid on keelatud, ei näe sa neid ka teiste puhul.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Palu klaviatuuril keelata isikupärastatud õppimine</string>
-  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">Blokeeritud kontaktid</string> -->
   <string name="preferences_chats__when_using_mobile_data">Kui kasutad mobiilandmesidet</string>
   <string name="preferences_chats__when_using_wifi">Kui kasutad Wi-Fit</string>
   <string name="preferences_chats__when_roaming">Kui oled välismaal</string>
