--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -79,8 +79,10 @@
   <string name="AttachmentUploadJob_compressing_video_start">Compression de la vidéo…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Erreur de lecture du son.</string>
-  <!--BlockedContactsActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">Contacts bloqués</string> -->
+  <!--BlockedUsersActivity-->
+  <string name="BlockedUsersActivity__blocked_users_will">Les utilisateurs bloqués ne pourront ni vous appeler ni vous envoyer des messages.</string>
+  <string name="BlockedUsersActivity__block">Bloquer</string>
+  <string name="BlockedUsersActivity__unblock">Débloquer</string>
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">Bloquer et quitter %1$s ?</string>
   <string name="BlockUnblockDialog_block_s">Bloquer %1$s ?</string>
@@ -452,6 +454,9 @@
   <string name="GroupManagement_invite_multiple_users">Ces utilisateurs ne peuvent pas être ajoutés automatiquement par vous à ce groupe.\n\nDes invitations ont été envoyées et ces utilisateurs ne verront aucun message du groupe tant que les invitations n’auront pas été acceptées.</string>
   <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
   <string name="GroupsV1MigrationLearnMore_what_are_new_groups">Que sont les nouveaux groupes ?</string>
+  <!--GroupsV1MigrationSuggestionsReminder-->
+  <string name="GroupsV1MigrationSuggestionsReminder_not_now">Pas maintenant</string>
+  <!--GroupsV1MigrationSuggestionsDialog-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Quitter le groupe ?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Vous ne pourrez plus recevoir ni envoyer de messages dans ce groupe.</string>
@@ -1072,8 +1077,12 @@
   <string name="WebRtcCallView__signal_voice_call">Appel vocal Signal…</string>
   <string name="WebRtcCallView__signal_video_call">Appel vidéo Signal…</string>
   <string name="WebRtcCallView__start_call">Démarrer un appel</string>
-  <!-- Removed by excludeNonTranslatables <string name="WebRtcCallView__group_call">Appel de groupe</string> -->
+  <string name="WebRtcCallView__join_call">Me joindre à l’appel</string>
   <string name="WebRtcCallView__view_participants_list">Afficher les participants</string>
+  <string name="WebRtcCallView__connecting">Connexion…</string>
+  <string name="WebRtcCallView__reconnecting">Reconnexion…</string>
+  <string name="WebRtcCallView__disconnected">L’application est déconnectée</string>
+  <string name="WebRtcCallView__no_one_else_is_here">Il n’y a personne d’autre ici</string>
   <!--CallParticipantsListDialog-->
   <!--RegistrationActivity-->
   <string name="RegistrationActivity_select_your_country">Sélectionner votre pays</string>
@@ -1234,12 +1243,12 @@
   <string name="UpdateApkReadyListener_Signal_update">Mise à jour de Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Une nouvelle version de Signal est proposée, touchez pour lancer la mise à jour</string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">Bloquer %s ?</string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Les contacts bloqués ne pourront plus ni vous envoyer de messages ni vous appeler.</string>
-  <string name="UnknownSenderView_block">Bloquer</string>
-  <string name="UnknownSenderView_share_profile_with_s">Partager le profil avec %s ?</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">La manière la plus simple de partager vos renseignements de profil est d’ajouter l’expéditeur à vos contacts. Si vous ne souhaitez pas le faire, vous pouvez toujours partager vos renseignements de profil de cette façon.</string>
-  <string name="UnknownSenderView_share_profile">Partager le profil</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">Bloquer %s ?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Les contacts bloqués ne pourront plus ni vous envoyer de messages ni vous appeler.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">Bloquer</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">Partager le profil avec %s ?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">La manière la plus simple de partager vos renseignements de profil est d’ajouter l’expéditeur à vos contacts. Si vous ne souhaitez pas le faire, vous pouvez toujours partager vos renseignements de profil de cette façon.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">Partager le profil</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">Envoyer le message ?</string>
   <string name="UntrustedSendDialog_send">Envoyer</string>
@@ -1613,7 +1622,7 @@
   </plurals>
   <string name="GroupUtil_group_name_is_now">Le nom du groupe est désormais « %1$s ».</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Rendre vos nom et photo de profil visibles pour ce groupe ?</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Rendre vos nom et photo de profil visibles pour ce groupe ?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">Déverrouiller</string>
   <!--prompt_mms_activity-->
@@ -1839,7 +1848,6 @@
   <string name="preferences__typing_indicators">Indicateurs de saisie</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Si les indicateurs de saisie sont désactivés, vous ne serez pas en mesure de voir les indicateurs de saisie d’autrui.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Demander au clavier de désactiver l’apprentissage personnalisé</string>
-  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">Contacts bloqués</string> -->
   <string name="preferences_chats__when_using_mobile_data">En utilisant les données mobiles</string>
   <string name="preferences_chats__when_using_wifi">En utilisant le WI-FI</string>
   <string name="preferences_chats__when_roaming">En itinérance</string>
