--- a/app/src/main/res/values-gu/strings.xml
+++ b/app/src/main/res/values-gu/strings.xml
@@ -784,12 +784,12 @@
   <string name="UpdateApkReadyListener_Signal_update">Signal અપડેટ</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Signalનું નવું વર્ઝન ઉપલબ્ધ છે, અપડેટ કરવા માટે ટેપ કરો</string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">%s અવરોધિત કરો?</string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">અવરોધિત સંપર્કો હવે તમને મેસેજ મોકલવા અથવા કૉલ કરવામાં સમર્થ રહેશે નહીં.</string>
-  <string name="UnknownSenderView_block">અવરોધિત કરો</string>
-  <string name="UnknownSenderView_share_profile_with_s">%s સાથે પ્રોફાઇલ શેર કરવી છે?</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">તમારી પ્રોફાઇલ માહિતી શેર કરવાનો સૌથી સહેલો રસ્તો એ છે કે તમારા સંપર્કોમાં મોકલનારને ઉમેરવો. જો તમે ઇચ્છતા નથી, તો તમે હજી પણ તમારી પ્રોફાઇલ માહિતી આ રીતે શેર કરી શકો છો.</string>
-  <string name="UnknownSenderView_share_profile">પ્રોફાઇલ શેર કરો</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">%s અવરોધિત કરો?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">અવરોધિત સંપર્કો હવે તમને મેસેજ મોકલવા અથવા કૉલ કરવામાં સમર્થ રહેશે નહીં.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">અવરોધિત કરો</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">%s સાથે પ્રોફાઇલ શેર કરવી છે?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">તમારી પ્રોફાઇલ માહિતી શેર કરવાનો સૌથી સહેલો રસ્તો એ છે કે તમારા સંપર્કોમાં મોકલનારને ઉમેરવો. જો તમે ઇચ્છતા નથી, તો તમે હજી પણ તમારી પ્રોફાઇલ માહિતી આ રીતે શેર કરી શકો છો.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">પ્રોફાઇલ શેર કરો</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">મેસેજ મોકલો?</string>
   <string name="UntrustedSendDialog_send">મોકલો</string>
@@ -1134,7 +1134,7 @@
   </plurals>
   <string name="GroupUtil_group_name_is_now">ગ્રુપ નું નામ હવે \'%1$s\' છે.</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">આ ગ્રુપ માટે તમારું પ્રોફાઇલ નામ અને ફોટો દૃશ્યક્ષમ બનાવો?</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">આ ગ્રુપ માટે તમારું પ્રોફાઇલ નામ અને ફોટો દૃશ્યક્ષમ બનાવો?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">અનલૉક</string>
   <!--prompt_mms_activity-->
