--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -79,8 +79,10 @@
   <string name="AttachmentUploadJob_compressing_video_start">Videó tömörítése…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Hiba történt a hang lejátszása során!</string>
-  <!--BlockedContactsActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">Blokkolt kontaktok</string> -->
+  <!--BlockedUsersActivity-->
+  <string name="BlockedUsersActivity__blocked_users_will">A letiltott felhasználók nem fognak tudni sem üzenetet küldeni neked, sem pedig felhívni.</string>
+  <string name="BlockedUsersActivity__block">Letiltás</string>
+  <string name="BlockedUsersActivity__unblock">Tiltás feloldása</string>
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">%1$s letiltása és kilépés?</string>
   <string name="BlockUnblockDialog_block_s">Letiltod %1$s-t?</string>
@@ -466,10 +468,13 @@
     <item quantity="one">Ezt a tagot újra meg meg kell hívni, és kell fogadnia a meghívót, mielőtt újra üzenetet tudna fogadni a csoporttól:</item>
     <item quantity="other">Ezeket a tagokat újra meg meg kell hívni, és kell fogadniuk a meghívót, mielőtt újra üzenetet tudnak fogadni a csoporttól:</item>
   </plurals>
-  <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
+  <!-- Removed by excludeNonTranslatables <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
     <item quantity="one">Ez a csoporttag nem tud az új típusú csoportba belépni, ezért eltávolításra került a tagok közül:</item>
     <item quantity="other">Ezek a csoporttagok nem tudnak az új típusú csoportba belépni, ezért eltávolításra kerültek a tagok közül:</item>
-  </plurals>
+  </plurals> -->
+  <!--GroupsV1MigrationSuggestionsReminder-->
+  <string name="GroupsV1MigrationSuggestionsReminder_not_now">Most nem</string>
+  <!--GroupsV1MigrationSuggestionsDialog-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Kilépsz a csoportból?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Többé nem tudsz küldeni vagy fogadni üzeneteket és hívásokat ebben a csoportban.</string>
@@ -1111,9 +1116,13 @@ Kérlek telepítsd újra a Google Play Szolgáltatásokat, majd próbáld újra!
   <string name="WebRtcCallView__signal_voice_call">Signal hanghívás…</string>
   <string name="WebRtcCallView__signal_video_call">Signal videóhívás…</string>
   <string name="WebRtcCallView__start_call">Hívás indítása</string>
-  <!-- Removed by excludeNonTranslatables <string name="WebRtcCallView__group_call">Csoporthívás</string> -->
+  <string name="WebRtcCallView__join_call">Belépés a hívásba</string>
   <string name="WebRtcCallView__view_participants_list">Résztvevők megtekintése</string>
   <string name="WebRtcCallView__your_video_is_off">A kamerád ki van kapcsolva</string>
+  <string name="WebRtcCallView__connecting">Csatlakozás…</string>
+  <string name="WebRtcCallView__reconnecting">Újracsatlakozás…</string>
+  <string name="WebRtcCallView__disconnected">Lecsatlakozva</string>
+  <string name="WebRtcCallView__no_one_else_is_here">Nincs itt senki</string>
   <!--CallParticipantsListDialog-->
   <plurals name="CallParticipantsListDialog_in_this_call_d_people">
     <item quantity="one">Ebben a hívásban · %1$d személy</item>
@@ -1287,12 +1296,12 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="UpdateApkReadyListener_Signal_update">Signal frissítés</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">A Signal egy új verziója érhető el, koppints a frissítéshez</string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">%s letiltása?</string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">A blokkolt kontaktok többé nem lesznek képesek üzeneteket küldeni neked vagy hívni téged.</string>
-  <string name="UnknownSenderView_block">Blokkolás</string>
-  <string name="UnknownSenderView_share_profile_with_s">Megosztod profilodat a következővel: %s?</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">A profilod adait legegyszerűbben úgy tudod megosztani, ha hozzáadod a feladót a névjegyzékedhez. Ha nem szeretnél így tenni, ilyen módon továbbra is megoszthatod profilod adatait.</string>
-  <string name="UnknownSenderView_share_profile">Profil megosztása</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">%s letiltása?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">A blokkolt kontaktok többé nem lesznek képesek üzeneteket küldeni neked vagy hívni téged.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">Blokkolás</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">Megosztod profilodat a következővel: %s?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">A profilod adait legegyszerűbben úgy tudod megosztani, ha hozzáadod a feladót a névjegyzékedhez. Ha nem szeretnél így tenni, ilyen módon továbbra is megoszthatod profilod adatait.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">Profil megosztása</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">Üzenet küldése?</string>
   <string name="UntrustedSendDialog_send">Küldés</string>
@@ -1673,7 +1682,7 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   </plurals>
   <string name="GroupUtil_group_name_is_now">A csoport neve mostantól \'%1$s\'.</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Láthatóvá teszed a profilneved- és képed a csoport számára?</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Láthatóvá teszed a profilneved- és képed a csoport számára?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">Feloldás</string>
   <!--prompt_mms_activity-->
@@ -1899,7 +1908,6 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="preferences__typing_indicators">Gépelés-indikátorok</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Ha a gépelés-indikátorod ki van kapcsolva, te sem fogsz értesülni róla, ha mások épp gépelnek.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Tanulás letiltásának kérése a billentyűzettől (személyre szabás kikapcsolása)</string>
-  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">Blokkolt kontaktok</string> -->
   <string name="preferences_chats__when_using_mobile_data">Mobilinternet használata során</string>
   <string name="preferences_chats__when_using_wifi">Wi-Fi használata során</string>
   <string name="preferences_chats__when_roaming">Barangoláskor</string>
