--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -951,12 +951,12 @@ Menerima pesan pertukaran kunci untuk versi protokol yang tidak valid.
   <string name="UpdateApkReadyListener_Signal_update">Pembaharuan Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Versi baru Signal tersedia, ketuk untuk memperbarui</string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">Blokir %s</string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Kontak yang diblokir tidak dapat mengirimkan Anda pesan atau panggilan lagi</string>
-  <string name="UnknownSenderView_block">Blokir</string>
-  <string name="UnknownSenderView_share_profile_with_s">Bagikan profil dengan%s</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Cara yang paling mudah untuk membagikan informasi profil Anda adalah dengan menambahkan pengirim ke dalam kontak. Jika anda tidak menginginkannya, anda tetap bisa membagikan informasi profil anda dengan cara ini.</string>
-  <string name="UnknownSenderView_share_profile">Bagikan profil</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">Blokir %s</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Kontak yang diblokir tidak dapat mengirimkan Anda pesan atau panggilan lagi</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">Blokir</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">Bagikan profil dengan%s</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Cara yang paling mudah untuk membagikan informasi profil Anda adalah dengan menambahkan pengirim ke dalam kontak. Jika anda tidak menginginkannya, anda tetap bisa membagikan informasi profil anda dengan cara ini.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">Bagikan profil</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">Kirim pesan?</string>
   <string name="UntrustedSendDialog_send">Kirim</string>
@@ -1295,7 +1295,7 @@ Menerima pesan pertukaran kunci untuk versi protokol yang tidak valid.
   </plurals>
   <string name="GroupUtil_group_name_is_now">Nama grup sekarang \'%1$s\'.</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Tampilkan profil dan foto anda dalam grup ini?</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Tampilkan profil dan foto anda dalam grup ini?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">Buka Kunci</string>
   <!--prompt_mms_activity-->
