--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -76,8 +76,10 @@
   <string name="AttachmentUploadJob_compressing_video_start">動画を圧縮しています…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">音声再生中にエラーが発生しました！</string>
-  <!--BlockedContactsActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">ブロック中の連絡先</string> -->
+  <!--BlockedUsersActivity-->
+  <string name="BlockedUsersActivity__blocked_users_will">ブロックされたユーザは、あなたにメッセージや通話を発信することができなくなります。</string>
+  <string name="BlockedUsersActivity__block">ブロックする</string>
+  <string name="BlockedUsersActivity__unblock">ブロックを解除する</string>
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">%1$s から抜けてブロックしますか？</string>
   <string name="BlockUnblockDialog_block_s">%1$s をブロックしますか？</string>
@@ -443,6 +445,9 @@
   <string name="GroupsV1MigrationLearnMore_what_are_new_groups">新しいグループとは？</string>
   <string name="GroupsV1MigrationLearnMore_new_groups_have_features_like_mentions">新グループには、@mentionや管理者機能などがあります。将来、新しい機能も追加されます。</string>
   <string name="GroupsV1MigrationLearnMore_all_message_history_and_media_has_been_kept">すべてのメッセージ履歴とメディアは、アップグレード前から維持されています。</string>
+  <!--GroupsV1MigrationSuggestionsReminder-->
+  <string name="GroupsV1MigrationSuggestionsReminder_not_now">今はしない</string>
+  <!--GroupsV1MigrationSuggestionsDialog-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">グループを抜けますか？</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">このグループでのメッセージ送受信ができなくなります。</string>
@@ -711,7 +716,7 @@
   <string name="MediaOverviewActivity_Newest">新しい順</string>
   <string name="MediaOverviewActivity_Oldest">古い順</string>
   <string name="MediaOverviewActivity_Storage_used">ストレージ使用量</string>
-  <string name="MediaOverviewActivity_All_storage_use">すべてのストレージ使用量</string>
+  <string name="MediaOverviewActivity_All_storage_use">ストレージの利用状況</string>
   <string name="MediaOverviewActivity_Grid_view_description">グリッド表示</string>
   <string name="MediaOverviewActivity_List_view_description">リスト表示</string>
   <string name="MediaOverviewActivity_Selected_description">選択済み</string>
@@ -1049,9 +1054,13 @@
   <string name="WebRtcCallView__signal_voice_call">Signal音声通話…</string>
   <string name="WebRtcCallView__signal_video_call">Signalビデオ通話…</string>
   <string name="WebRtcCallView__start_call">通話を開始する</string>
-  <!-- Removed by excludeNonTranslatables <string name="WebRtcCallView__group_call">グループ通話</string> -->
+  <string name="WebRtcCallView__join_call">通話に参加</string>
   <string name="WebRtcCallView__view_participants_list">参加者を確認する</string>
   <string name="WebRtcCallView__your_video_is_off">あなたの映像はオフです</string>
+  <string name="WebRtcCallView__connecting">接続しています…</string>
+  <string name="WebRtcCallView__reconnecting">再接続しています…</string>
+  <string name="WebRtcCallView__disconnected">接続していません</string>
+  <string name="WebRtcCallView__no_one_else_is_here">誰も参加していません</string>
   <!--CallParticipantsListDialog-->
   <plurals name="CallParticipantsListDialog_in_this_call_d_people">
     <item quantity="other">参加者 · %1$d人</item>
@@ -1214,12 +1223,12 @@
   <string name="UpdateApkReadyListener_Signal_update">Signalアップデート</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">新バージョンのSignalを利用できます。タップしてアップデートします。</string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">%s をブロックしますか？</string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">ブロックされた連絡先は、あなたへのメッセージ送信や通話発信ができなくなります。</string>
-  <string name="UnknownSenderView_block">ブロックする</string>
-  <string name="UnknownSenderView_share_profile_with_s">%s とプロフィール情報を共有しますか？</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">相手の電話番号を連絡先に追加することが、あなたのプロフィール情報を共有する一番簡単な方法ですが、それ以外にこの方法でも共有できます。</string>
-  <string name="UnknownSenderView_share_profile">プロフィール情報を共有する</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">%s をブロックしますか？</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">ブロックされた連絡先は、あなたへのメッセージ送信や通話発信ができなくなります。</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">ブロックする</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">%s とプロフィール情報を共有しますか？</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">相手の電話番号を連絡先に追加することが、あなたのプロフィール情報を共有する一番簡単な方法ですが、それ以外にこの方法でも共有できます。</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">プロフィール情報を共有する</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">メッセージを送信しますか？</string>
   <string name="UntrustedSendDialog_send">送信する</string>
@@ -1589,7 +1598,7 @@
   </plurals>
   <string name="GroupUtil_group_name_is_now">グループ名が「%1$s」になりました。</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">このグループにあなたのプロフィール名と画像を公開しますか？</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">このグループにあなたのプロフィール名と画像を公開しますか？</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">ロック解除</string>
   <!--prompt_mms_activity-->
@@ -1814,7 +1823,6 @@
   <string name="preferences__typing_indicators">入力中アイコン</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">入力中アイコンが無効の場合、相手の入力中アイコンも表示されません。</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">キーボードに自動学習の停止を要求します</string>
-  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">ブロック中の連絡先</string> -->
   <string name="preferences_chats__when_using_mobile_data">モバイルデータ通信利用時</string>
   <string name="preferences_chats__when_using_wifi">Wi-Fi利用時</string>
   <string name="preferences_chats__when_roaming">ローミング時</string>
