--- a/app/src/main/res/values-km/strings.xml
+++ b/app/src/main/res/values-km/strings.xml
@@ -76,8 +76,10 @@
   <string name="AttachmentUploadJob_compressing_video_start">កំពុងពង្រួមវីដេអូ…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">បញ្ហាការចាក់សំឡេង!</string>
-  <!--BlockedContactsActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">បិទលេខទំនាក់ទំនង</string> -->
+  <!--BlockedUsersActivity-->
+  <string name="BlockedUsersActivity__blocked_users_will">អ្នកប្រើប្រាស់ដែលបានហាមឃាត់ នឹងមិនអាចហៅ ឬផ្ញើសារមកអ្នកបានទេ។</string>
+  <string name="BlockedUsersActivity__block">រារាំង</string>
+  <string name="BlockedUsersActivity__unblock">បើកវិញ</string>
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">ហាមឃាត់ និងចាកចេញ %1$s?</string>
   <string name="BlockUnblockDialog_block_s">ហាមឃាត់%1$s?</string>
@@ -409,6 +411,9 @@
   </plurals>
   <string name="GroupManagement_learn_more">សិក្សាបន្ថែម</string>
   <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
+  <!--GroupsV1MigrationSuggestionsReminder-->
+  <string name="GroupsV1MigrationSuggestionsReminder_not_now">ពេលក្រោយ</string>
+  <!--GroupsV1MigrationSuggestionsDialog-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">ចាកចេញពីក្រុម?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">អ្នកនឹងមិនអាចផ្ញើ ឬទទួលសារក្នុងក្រុមនេះទៀតទេ។</string>
@@ -882,6 +887,9 @@
   <!--WebRtcCallView-->
   <string name="WebRtcCallView__signal_voice_call">Signal ហៅជាសំឡេង…</string>
   <string name="WebRtcCallView__signal_video_call">Signal ហៅជាវីដេអូ…</string>
+  <string name="WebRtcCallView__connecting">កំពុងតភ្ជាប់…</string>
+  <string name="WebRtcCallView__reconnecting">កំពុងតភ្ជាប់ម្តងទៀត…</string>
+  <string name="WebRtcCallView__disconnected">បានផ្តាច់ការភ្ចាប់</string>
   <!--CallParticipantsListDialog-->
   <!--RegistrationActivity-->
   <string name="RegistrationActivity_select_your_country">ជ្រើសរើសប្រទេសរបស់អ្នក</string>
@@ -1041,12 +1049,12 @@
   <string name="UpdateApkReadyListener_Signal_update">បច្ចុប្បន្នភាព Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">កំណែថ្មីរបស់ Signal មានហើយ, ចុច ដើម្បីធ្វើបច្ចុប្បន្នភាព។</string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">ហាមឃាត់ %s?</string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">លេខទំនាក់ទំនងដែលបានហាមឃាត់ នឹងលែងផ្ញើសារឱ្យអ្នកបាន ឬហៅមកអ្នកបានទៀតទេ។</string>
-  <string name="UnknownSenderView_block">ហាមឃាត់</string>
-  <string name="UnknownSenderView_share_profile_with_s">ចែករំលែកប្រវត្តិរូបជាមួយ %s?</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">វិធីដែលងាយបំផុតក្នុងការចែករំលែកព័ត៌មានរបស់អ្នក គឺបន្ថែមអ្នកផ្ញើចូលក្នុងបញ្ជីទំនាក់ទំនងអ្នក។ ប្រសិនបើអ្នកមិនចង់ធ្វើដូចនេះទេ អ្នកនៅតែអាចចែករំលែកព័ត៌មានរបស់អ្នកតាមវិធីនេះ។</string>
-  <string name="UnknownSenderView_share_profile">ចែករំលែកប្រវត្តិរូប</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">ហាមឃាត់ %s?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">លេខទំនាក់ទំនងដែលបានហាមឃាត់ នឹងលែងផ្ញើសារឱ្យអ្នកបាន ឬហៅមកអ្នកបានទៀតទេ។</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">ហាមឃាត់</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">ចែករំលែកប្រវត្តិរូបជាមួយ %s?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">វិធីដែលងាយបំផុតក្នុងការចែករំលែកព័ត៌មានរបស់អ្នក គឺបន្ថែមអ្នកផ្ញើចូលក្នុងបញ្ជីទំនាក់ទំនងអ្នក។ ប្រសិនបើអ្នកមិនចង់ធ្វើដូចនេះទេ អ្នកនៅតែអាចចែករំលែកព័ត៌មានរបស់អ្នកតាមវិធីនេះ។</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">ចែករំលែកប្រវត្តិរូប</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">ផ្ញើសារ?</string>
   <string name="UntrustedSendDialog_send">ផ្ញើ</string>
@@ -1394,7 +1402,7 @@
   </plurals>
   <string name="GroupUtil_group_name_is_now">ឈ្មោះក្រុមឥឡូវគឺ \'%1$s\'.</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">បង្ហាញឈ្មោះ និងរូបភាពអ្នកក្នុងក្រុមនេះ?</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">បង្ហាញឈ្មោះ និងរូបភាពអ្នកក្នុងក្រុមនេះ?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">ដោះសោរ</string>
   <!--prompt_mms_activity-->
@@ -1608,7 +1616,6 @@
   <string name="preferences__typing_indicators">វាស់ការវាយអក្សរ</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">ប្រសិនបើ ការបង្ហាញការវាយត្រូវបានបិទ អ្នកនឹងមិនអាចមើលឃើញការវាយបញ្ចូលរបស់អ្នកដទៃទេ។</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">ការស្នើសុំក្តារចុច ដើម្បីបិទការសិក្សាផ្ទាល់ខ្លួន</string>
-  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">បិទលេខទំនាក់ទំនង</string> -->
   <string name="preferences_chats__when_using_mobile_data">នៅពេលប្រើប្រាស់ទិន្នន័យទូរសព្ទ</string>
   <string name="preferences_chats__when_using_wifi">នៅពេលប្រើប្រាស់Wi-Fi</string>
   <string name="preferences_chats__when_roaming">នៅពេលរ៉ូមីង</string>
