--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -75,8 +75,10 @@
   <string name="AttachmentUploadJob_compressing_video_start">동영상 압축 중…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">오디오 재생 중 오류가 발생했습니다!</string>
-  <!--BlockedContactsActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">차단된 연락처</string> -->
+  <!--BlockedUsersActivity-->
+  <string name="BlockedUsersActivity__blocked_users_will">차단한 사용자는 나에게 전화 또는 메시지를 보낼 수 없습니다.</string>
+  <string name="BlockedUsersActivity__block">차단</string>
+  <string name="BlockedUsersActivity__unblock">차단 해제</string>
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">%1$s를 차단하고 나갈까요?</string>
   <string name="BlockUnblockDialog_block_s">%1$s를 차단할까요?</string>
@@ -423,6 +425,9 @@
   </plurals>
   <string name="GroupManagement_learn_more">더 알아보기</string>
   <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
+  <!--GroupsV1MigrationSuggestionsReminder-->
+  <string name="GroupsV1MigrationSuggestionsReminder_not_now">나중에</string>
+  <!--GroupsV1MigrationSuggestionsDialog-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">그룹을 탈퇴하시겠습니까?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">이 그룹에서 메시지를 보내거나 받을 수 없게 됩니다.</string>
@@ -886,7 +891,12 @@
   <string name="WebRtcCallView__signal_voice_call">시그널 음성 통화…</string>
   <string name="WebRtcCallView__signal_video_call">시그널 영상 통화…</string>
   <string name="WebRtcCallView__start_call">전화 시작하기</string>
+  <string name="WebRtcCallView__join_call">전화 참여하기</string>
   <string name="WebRtcCallView__your_video_is_off">영상이 꺼졌습니다.</string>
+  <string name="WebRtcCallView__connecting">연결 중…</string>
+  <string name="WebRtcCallView__reconnecting">재연결 중…</string>
+  <string name="WebRtcCallView__disconnected">연결 끊김</string>
+  <string name="WebRtcCallView__no_one_else_is_here">아무도 없음</string>
   <!--CallParticipantsListDialog-->
   <!--RegistrationActivity-->
   <string name="RegistrationActivity_select_your_country">국가 선택</string>
@@ -1044,12 +1054,12 @@
   <string name="UpdateApkReadyListener_Signal_update">Signal 업데이트</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">새 Signal 버전 출시, 탭하여 업데이트</string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">%s 님을 차단하시겠습니까?</string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">차단된 연락처는 나에게 메시지를 보내거나 전화할 수 없습니다.</string>
-  <string name="UnknownSenderView_block">차단</string>
-  <string name="UnknownSenderView_share_profile_with_s">%s 님과 프로필을 공유하시겠습니까?</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">프로필 정보를 가장 간단하게 공유하는 방법은 해당 연락처를 추가하는 것입니다. 연락처에 저장하기 싫다면 이 방법으로도 프로필 정보를 공유할 수 있습니다.</string>
-  <string name="UnknownSenderView_share_profile">프로필 공유</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">%s 님을 차단하시겠습니까?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">차단된 연락처는 나에게 메시지를 보내거나 전화할 수 없습니다.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">차단</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">%s 님과 프로필을 공유하시겠습니까?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">프로필 정보를 가장 간단하게 공유하는 방법은 해당 연락처를 추가하는 것입니다. 연락처에 저장하기 싫다면 이 방법으로도 프로필 정보를 공유할 수 있습니다.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">프로필 공유</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">메시지를 보내시겠습니까?</string>
   <string name="UntrustedSendDialog_send">보내기</string>
@@ -1396,7 +1406,7 @@
   </plurals>
   <string name="GroupUtil_group_name_is_now">이제 그룹 이름은 \'%1$s\'입니다.</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">그룹에서 프로필 이름과 사진을 표시하시겠습니까?</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">그룹에서 프로필 이름과 사진을 표시하시겠습니까?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">잠금 해제</string>
   <!--prompt_mms_activity-->
@@ -1608,7 +1618,6 @@
   <string name="preferences__typing_indicators">입력 안내</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">입력 안내 기능이 꺼져 있다면, 다른 사람이 메시지를 쓰고 있는지 확인할 수 없습니다.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">키보드에서 맞춤형 자동 완성이 비활성화되도록 요청</string>
-  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">차단된 사용자</string> -->
   <string name="preferences_chats__when_using_mobile_data">모바일 데이터 사용 시</string>
   <string name="preferences_chats__when_using_wifi">Wi-Fi 사용 시</string>
   <string name="preferences_chats__when_roaming">로밍 시</string>
