--- a/app/src/main/res/values-ml/strings.xml
+++ b/app/src/main/res/values-ml/strings.xml
@@ -79,8 +79,10 @@
   <string name="AttachmentUploadJob_compressing_video_start">വീഡിയോ കം‌പ്രസ്സുചെയ്യുന്നു…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">ഓഡിയോ പ്ലേ ചെയ്യുന്നതിൽ പിശക്!</string>
-  <!--BlockedContactsActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">ബ്ലോക്ക് ചെയ്ത കോൺടാക്റ്റുകൾ</string> -->
+  <!--BlockedUsersActivity-->
+  <string name="BlockedUsersActivity__blocked_users_will">ബ്ലോക്ക് ചെയ്യപ്പെറ്റ ഉപയോക്താക്കൾക്ക് നിങ്ങളെ വിളിക്കാനോ മെസേജുകൾ അയയ്ക്കാനോ കഴിയില്ല.</string>
+  <string name="BlockedUsersActivity__block">ബ്ലോക്ക്</string>
+  <string name="BlockedUsersActivity__unblock">തടഞ്ഞത് മാറ്റുക</string>
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">%1$s-നെ ബ്ലോക്ക്യും ഉപേക്ഷിക്കുകയും ചെയ്യണോ?</string>
   <string name="BlockUnblockDialog_block_s">%1$s-നെ ബ്ലോക്ക് ചെയ്യണോ?</string>
@@ -421,6 +423,9 @@
   <!--GV2 invites sent-->
   <string name="GroupManagement_learn_more">കൂടുതൽ അറിയുക</string>
   <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
+  <!--GroupsV1MigrationSuggestionsReminder-->
+  <string name="GroupsV1MigrationSuggestionsReminder_not_now">ഇപ്പോൾ വേണ്ട</string>
+  <!--GroupsV1MigrationSuggestionsDialog-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">ഗ്രൂപ്പില്‍ നിന്നും ഒഴിയണോ?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">നിങ്ങൾക്ക് ഈ ഗ്രൂപ്പിൽ മെസേജുകൾ അയയ്ക്കാനോ സ്വീകരിക്കാനോ കഴിയില്ല.</string>
@@ -904,6 +909,8 @@
   <!--WebRtcCallView-->
   <string name="WebRtcCallView__signal_voice_call">സിഗ്നൽ വോയ്‌സ് കോൾ…</string>
   <string name="WebRtcCallView__signal_video_call">സിഗ്നൽ വീഡിയോ കോൾ…</string>
+  <string name="WebRtcCallView__connecting">കണക്ട് ചെയ്യുന്നു</string>
+  <string name="WebRtcCallView__reconnecting">റീകണക്ടിംഗ്…</string>
   <!--CallParticipantsListDialog-->
   <!--RegistrationActivity-->
   <string name="RegistrationActivity_select_your_country">നിങ്ങളുടെ രാജ്യം തിരഞ്ഞെടുക്കുക</string>
@@ -1064,12 +1071,12 @@ grūpp ap‌ḍē</string>
   <string name="UpdateApkReadyListener_Signal_update">Signal അപ്‌ഡേറ്റ്</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Signal-ന്റെ പുതിയ പതിപ്പ് ലഭ്യമാണ്, അപ്‌ഡേറ്റ് ചെയ്യാൻ ടാപ്പുചെയ്യുക</string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">ബ്ലോക്ക് %s?</string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">ബ്ലോക്ക് ചെയ്ത കോൺടാക്റ്റുകൾക്ക് മേലിൽ നിങ്ങൾക്ക് സന്ദേശങ്ങൾ അയയ്‌ക്കാനോ നിങ്ങളെ വിളിക്കാനോ കഴിയില്ല.</string>
-  <string name="UnknownSenderView_block">ബ്ലോക്ക്</string>
-  <string name="UnknownSenderView_share_profile_with_s">%s-മായി പ്രൊഫൈൽ പങ്കിടുക?</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">നിങ്ങളുടെ പ്രൊഫൈൽ വിവരങ്ങൾ പങ്കിടാനുള്ള എളുപ്പവഴി അയച്ചയാളെ നിങ്ങളുടെ കോൺടാക്റ്റുകളിൽ ചേർക്കുക എന്നതാണ്. നിങ്ങൾ‌ക്ക് താൽ‌പ്പര്യമില്ലെങ്കിൽ‌, നിങ്ങളുടെ പ്രൊഫൈൽ‌ വിവരങ്ങൾ‌ ഇപ്പോഴും ഈ രീതിയിൽ പങ്കിടാൻ‌ കഴിയും.</string>
-  <string name="UnknownSenderView_share_profile">പ്രൊഫൈൽ പങ്കിടുക</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">ബ്ലോക്ക് %s?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">ബ്ലോക്ക് ചെയ്ത കോൺടാക്റ്റുകൾക്ക് മേലിൽ നിങ്ങൾക്ക് സന്ദേശങ്ങൾ അയയ്‌ക്കാനോ നിങ്ങളെ വിളിക്കാനോ കഴിയില്ല.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">ബ്ലോക്ക്</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">%s-മായി പ്രൊഫൈൽ പങ്കിടുക?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">നിങ്ങളുടെ പ്രൊഫൈൽ വിവരങ്ങൾ പങ്കിടാനുള്ള എളുപ്പവഴി അയച്ചയാളെ നിങ്ങളുടെ കോൺടാക്റ്റുകളിൽ ചേർക്കുക എന്നതാണ്. നിങ്ങൾ‌ക്ക് താൽ‌പ്പര്യമില്ലെങ്കിൽ‌, നിങ്ങളുടെ പ്രൊഫൈൽ‌ വിവരങ്ങൾ‌ ഇപ്പോഴും ഈ രീതിയിൽ പങ്കിടാൻ‌ കഴിയും.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">പ്രൊഫൈൽ പങ്കിടുക</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">സന്ദേശം അയയ്ക്കുക?</string>
   <string name="UntrustedSendDialog_send">അയയ്‌ക്കുക</string>
@@ -1431,7 +1438,7 @@ grūpp ap‌ḍē</string>
   </plurals>
   <string name="GroupUtil_group_name_is_now">ഗ്രൂപ്പിന്റെ പേര് ഇപ്പോൾ \'%1$s\' ആണ്.</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">നിങ്ങളുടെ പ്രൊഫൈലിന്റെ പേരും ഫോട്ടോയും ഈ ഗ്രൂപ്പിന് ദൃശ്യമാക്കണോ?</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">നിങ്ങളുടെ പ്രൊഫൈലിന്റെ പേരും ഫോട്ടോയും ഈ ഗ്രൂപ്പിന് ദൃശ്യമാക്കണോ?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">അൺലോക്കുചെയ്യുക</string>
   <!--prompt_mms_activity-->
@@ -1650,7 +1657,6 @@ grūpp ap‌ḍē</string>
   <string name="preferences__typing_indicators">ടൈപ്പിംഗ് സൂചകങ്ങൾ</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">ടൈപ്പിംഗ് സൂചകങ്ങൾ അപ്രാപ്തമാക്കിയിട്ടുണ്ടെങ്കിൽ, മറ്റുള്ളവരിൽ നിന്ന് ടൈപ്പിംഗ് സൂചകങ്ങൾ നിങ്ങൾക്ക് കാണാൻ കഴിയില്ല.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">വ്യക്തിഗത പഠനം അപ്രാപ്‌തമാക്കുന്നതിന് കീബോർഡിനോട് അഭ്യർത്ഥിക്കുക</string>
-  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">ബ്ലോക്ക് ചെയ്ത കോൺടാക്റ്റുകൾ</string> -->
   <string name="preferences_chats__when_using_mobile_data">മൊബൈൽ ഡാറ്റ ഉപയോഗിക്കുമ്പോൾ</string>
   <string name="preferences_chats__when_using_wifi">വൈഫൈ ഉപയോഗിക്കുമ്പോൾ</string>
   <string name="preferences_chats__when_roaming">റോമിംഗ് ചെയ്യുമ്പോൾ</string>
