--- a/app/src/main/res/values-ms/strings.xml
+++ b/app/src/main/res/values-ms/strings.xml
@@ -682,12 +682,12 @@ Menerima mesej pertukaran kunci untuk versi protokol yang tidak sah.</string>
   <string name="UpdateApkReadyListener_Signal_update">Kemas kini Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Versi baru Signal tersedia, ketik untuk kemas kini</string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">Sekat %s ?</string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Kenalan yang disekat tidak akan dapat menghantar mesej kepada anda atau menghubungi anda.</string>
-  <string name="UnknownSenderView_block">Sekat</string>
-  <string name="UnknownSenderView_share_profile_with_s">Kongsikan profil dengan %s?</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Cara paling mudah untuk berkongsi maklumat profil anda adalah untuk menambah penghantar ke kenalan anda. Sekiranya anda tidak mahu, anda masih boleh berkongsi maklumat profil anda dengan cara ini.</string>
-  <string name="UnknownSenderView_share_profile">Kongsikan profil</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">Sekat %s ?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Kenalan yang disekat tidak akan dapat menghantar mesej kepada anda atau menghubungi anda.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">Sekat</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">Kongsikan profil dengan %s?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Cara paling mudah untuk berkongsi maklumat profil anda adalah untuk menambah penghantar ke kenalan anda. Sekiranya anda tidak mahu, anda masih boleh berkongsi maklumat profil anda dengan cara ini.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">Kongsikan profil</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">Hantar mesej?</string>
   <string name="UntrustedSendDialog_send">Hantar</string>
@@ -991,7 +991,7 @@ Menerima mesej pertukaran kunci untuk versi protokol yang tidak sah.</string>
   </plurals>
   <string name="GroupUtil_group_name_is_now">\'%1$s\' kini nama kumpulan.</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Jadikan nama profil dan foto boleh dilihat oleh kumpulan ini?</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Jadikan nama profil dan foto boleh dilihat oleh kumpulan ini?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">Buka kunci</string>
   <!--prompt_mms_activity-->
