--- a/app/src/main/res/values-pa-rPK/strings.xml
+++ b/app/src/main/res/values-pa-rPK/strings.xml
@@ -794,12 +794,12 @@
   <string name="UpdateApkReadyListener_Signal_update">Signal اپ ڈیٹ</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Signal دا اک نواں ورژن دستیاب اے، اپ ڈیٹ کرن لئی بٹن دبو </string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">%s نوںبلاک کرد‏‏ئی اے؟</string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you"> بلاک کیتے رابطے تہانوں ہور سنیہے گھلن یا کال کرن دے قابل نئیں ہون گے۔</string>
-  <string name="UnknownSenderView_block">بلاک کرو</string>
-  <string name="UnknownSenderView_share_profile_with_s">%s دے نال پروفائل سانجھی کرئیے؟</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">تہاڈی پروفائل دی معلومات سانجھیاں کرن دا سبھ توں سوکھا طریقہ اے کہ گھلن آلے نوں اپنے رابطے اچ شامل کیتا جاوے۔ جے تسیں نئیں چاہندے او، تسیں فیر وی ایس راہیں اپنی پروفائل دی معلومات سانجھیاں کرسکدے او۔</string>
-  <string name="UnknownSenderView_share_profile">پروفائل سانجھی کرو</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">%s نوںبلاک کرد‏‏ئی اے؟</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you"> بلاک کیتے رابطے تہانوں ہور سنیہے گھلن یا کال کرن دے قابل نئیں ہون گے۔</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">بلاک کرو</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">%s دے نال پروفائل سانجھی کرئیے؟</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">تہاڈی پروفائل دی معلومات سانجھیاں کرن دا سبھ توں سوکھا طریقہ اے کہ گھلن آلے نوں اپنے رابطے اچ شامل کیتا جاوے۔ جے تسیں نئیں چاہندے او، تسیں فیر وی ایس راہیں اپنی پروفائل دی معلومات سانجھیاں کرسکدے او۔</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">پروفائل سانجھی کرو</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">سنیہا گھلیے؟</string>
   <string name="UntrustedSendDialog_send">گھلو</string>
@@ -1145,7 +1145,7 @@
   </plurals>
   <string name="GroupUtil_group_name_is_now">گروپ دا ناں ہن \'%1$s\' اے۔</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">ایس گروپ نوں تہاڈا پروفائل ناں تے تصویر ظاہرکرئیے؟</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">ایس گروپ نوں تہاڈا پروفائل ناں تے تصویر ظاہرکرئیے؟</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">غیرمقفل کرو</string>
   <!--prompt_mms_activity-->
