--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -79,8 +79,10 @@
   <string name="AttachmentUploadJob_compressing_video_start">A comprimir vídeo…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Erro ao reproduzir áudio!</string>
-  <!--BlockedContactsActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">Contactos bloqueados</string> -->
+  <!--BlockedUsersActivity-->
+  <string name="BlockedUsersActivity__blocked_users_will">Os utilizadores bloqueados não poderão telefonar-lhe ou enviar-lhe mensagens.</string>
+  <string name="BlockedUsersActivity__block">Bloquear</string>
+  <string name="BlockedUsersActivity__unblock">Desbloquear</string>
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">Bloquear e abandonar %1$s?</string>
   <string name="BlockUnblockDialog_block_s">Bloquear %1$s?</string>
@@ -465,10 +467,13 @@
     <item quantity="one">Este membro necessitará de aceitar um convite para se juntar novamente a este grupo e não receberá mensagens do grupo até que eles aceitem:</item>
     <item quantity="other">Estes membros necessitarão de aceitar um convite para se juntarem novamente a este grupo e não receberão mensagens de grupo até que eles aceitem:</item>
   </plurals>
-  <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
+  <!-- Removed by excludeNonTranslatables <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
     <item quantity="one">Este membro não é capaz de se juntar a \'Novos grupos\' e foi removido do grupo:</item>
     <item quantity="other">Estes membros não são capazes de se juntarem a \'Novos grupos\' e foram removidos do grupo:</item>
-  </plurals>
+  </plurals> -->
+  <!--GroupsV1MigrationSuggestionsReminder-->
+  <string name="GroupsV1MigrationSuggestionsReminder_not_now">Agora não</string>
+  <!--GroupsV1MigrationSuggestionsDialog-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Abandonar o grupo?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Deixará poder de receber ou enviar mensagens deste grupo.</string>
@@ -1108,9 +1113,13 @@
   <string name="WebRtcCallView__signal_voice_call">Chamada de voz do Signal…</string>
   <string name="WebRtcCallView__signal_video_call">Chamada de vídeo do Signal…</string>
   <string name="WebRtcCallView__start_call">Iniciar chamada</string>
-  <!-- Removed by excludeNonTranslatables <string name="WebRtcCallView__group_call">Chamada de grupo</string> -->
+  <string name="WebRtcCallView__join_call">Entrar na chamada</string>
   <string name="WebRtcCallView__view_participants_list">Ver participantes</string>
   <string name="WebRtcCallView__your_video_is_off">O seu vídeo encontra-se desligado</string>
+  <string name="WebRtcCallView__connecting">A ligar…</string>
+  <string name="WebRtcCallView__reconnecting">A ligar novamente…</string>
+  <string name="WebRtcCallView__disconnected">Desligado</string>
+  <string name="WebRtcCallView__no_one_else_is_here">Não está mais ninguém aqui</string>
   <!--CallParticipantsListDialog-->
   <plurals name="CallParticipantsListDialog_in_this_call_d_people">
     <item quantity="one">Nesta chamada · %1$d pessoa</item>
@@ -1281,12 +1290,12 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="UpdateApkReadyListener_Signal_update">Atualização do Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Está disponível uma nova versão do Signal, toque para atualizar</string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">Bloquear %s?</string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Contactos bloqueados deixarão de poder enviar-lhe mensagens ou ligar-lhe.</string>
-  <string name="UnknownSenderView_block">Bloquear</string>
-  <string name="UnknownSenderView_share_profile_with_s">Partilhar perfil com %s?</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">A forma mais simples de partilhar a sua informação de perfil é adicionar o remetente aos seus contactos. Se não o desejar fazer, pode mesmo assim partilhar essa informação desta forma.</string>
-  <string name="UnknownSenderView_share_profile">Partilhar perfil</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">Bloquear %s?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Contactos bloqueados deixarão de poder enviar-lhe mensagens ou ligar-lhe.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">Bloquear</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">Partilhar perfil com %s?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">A forma mais simples de partilhar a sua informação de perfil é adicionar o remetente aos seus contactos. Se não o desejar fazer, pode mesmo assim partilhar essa informação desta forma.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">Partilhar perfil</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">Enviar mensagem?</string>
   <string name="UntrustedSendDialog_send">Enviar</string>
@@ -1666,7 +1675,7 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   </plurals>
   <string name="GroupUtil_group_name_is_now">O nome do grupo é agora \'%1$s\'.</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Tornar o seu nome e fotografia de perfil visíveis para este grupo?</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Tornar o seu nome e fotografia de perfil visíveis para este grupo?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">Desbloquear</string>
   <!--prompt_mms_activity-->
@@ -1892,7 +1901,6 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="preferences__typing_indicators">Indicadores de escrita</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Se os indicadores de escrita estiverem desativados, não poderá ver os indicadores de escrita de outros utilizadores.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Pedir ao teclado para desligar a aprendizagem de palavras</string>
-  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">Contactos bloqueados</string> -->
   <string name="preferences_chats__when_using_mobile_data">Ao utilizar os dados móveis</string>
   <string name="preferences_chats__when_using_wifi">Ao utilizar o Wi-Fi</string>
   <string name="preferences_chats__when_roaming">Ao utilizar o roaming</string>
