--- a/app/src/main/res/values-qu-rEC/strings.xml
+++ b/app/src/main/res/values-qu-rEC/strings.xml
@@ -552,12 +552,12 @@ Shuk ranti pakallayupay chaski chayamurka, shuk ñawpa mana alli protocolo kashk
   <string name="UpdateApkReadyListener_Signal_update">Signal mushukyarina tiyan</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Mushukyachina Signal tiyan, mushukyachinkapak kaypi llapi.</string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">Anchuchinayanchu %s</string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Anchuchishka yupaymashikuna mana killkayta kayachita ushankachu.</string>
-  <string name="UnknownSenderView_block">Pakana</string>
-  <string name="UnknownSenderView_share_profile_with_s">Kikinpa kallari willachita payman riksichinayanchu %s</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Ñukapa willaykunata hawalla riksichinkapak munashpaka kikinpa mashiyupayta kimichi. Mana kayta shinankapa munashpaka, kikinpa kallari willayta kashna riksichita ushankimi.</string>
-  <string name="UnknownSenderView_share_profile">Kallari willayta riksichi</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">Anchuchinayanchu %s</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Anchuchishka yupaymashikuna mana killkayta kayachita ushankachu.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">Pakana</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">Kikinpa kallari willachita payman riksichinayanchu %s</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Ñukapa willaykunata hawalla riksichinkapak munashpaka kikinpa mashiyupayta kimichi. Mana kayta shinankapa munashpaka, kikinpa kallari willayta kashna riksichita ushankimi.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">Kallari willayta riksichi</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">Chaskita kachanayanchu</string>
   <string name="UntrustedSendDialog_send">Kachana</string>
@@ -846,7 +846,7 @@ Shuk ranti pakallayupay chaski chayamurka, shuk ñawpa mana alli protocolo kashk
   </plurals>
   <string name="GroupUtil_group_name_is_now">Kunanka tantanakuypa shutika kanmi \'%1$s\'.</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Shutita, kallari willaypa shuyutapash, kay tantanakuypak rikurichun munankichu.</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Shutita, kallari willaypa shuyutapash, kay tantanakuypak rikurichun munankichu.</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">Yaykunallata saki</string>
   <!--prompt_mms_activity-->
