--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -82,8 +82,10 @@
   <string name="AttachmentUploadJob_compressing_video_start">Se comprimă video-ul…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Eroare la redarea audio!</string>
-  <!--BlockedContactsActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">Contacte blocate</string> -->
+  <!--BlockedUsersActivity-->
+  <string name="BlockedUsersActivity__blocked_users_will">Utilizatorii blocați nu vor putea să te sune sau să îți trimită mesaje.</string>
+  <string name="BlockedUsersActivity__block">Blochează</string>
+  <string name="BlockedUsersActivity__unblock">Deblochează</string>
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">Blocați și părăsiți %1$s?</string>
   <string name="BlockUnblockDialog_block_s">Blochez %1$s?</string>
@@ -473,6 +475,9 @@
   <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
   <string name="GroupsV1MigrationLearnMore_what_are_new_groups">Ce sunt Noile Grupuri?</string>
   <string name="GroupsV1MigrationLearnMore_all_message_history_and_media_has_been_kept">Tot istoricul mesajelor și conținutul media a fost păstrat înainte de actualizare.</string>
+  <!--GroupsV1MigrationSuggestionsReminder-->
+  <string name="GroupsV1MigrationSuggestionsReminder_not_now">Nu acum</string>
+  <!--GroupsV1MigrationSuggestionsDialog-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Părăsiți grupul?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Nu vei mai putea trimite sau primi mesaje in acest grup.</string>
@@ -1138,9 +1143,13 @@
   <string name="WebRtcCallView__signal_voice_call">Apel vocal Signal…</string>
   <string name="WebRtcCallView__signal_video_call">Apel video Signal…</string>
   <string name="WebRtcCallView__start_call">Începeți apelul</string>
-  <!-- Removed by excludeNonTranslatables <string name="WebRtcCallView__group_call">Apel de grup</string> -->
+  <string name="WebRtcCallView__join_call">Alătură-te apelului</string>
   <string name="WebRtcCallView__view_participants_list">Vizualizați participanții</string>
   <string name="WebRtcCallView__your_video_is_off">Video-ul dvs. este oprit</string>
+  <string name="WebRtcCallView__connecting">Se conectează…</string>
+  <string name="WebRtcCallView__reconnecting">Se reconectează…</string>
+  <string name="WebRtcCallView__disconnected">Deconectat</string>
+  <string name="WebRtcCallView__no_one_else_is_here">Nu este nimeni aici</string>
   <!--CallParticipantsListDialog-->
   <plurals name="CallParticipantsListDialog_in_this_call_d_people">
     <item quantity="one">În acest apel · %1$d persoană</item>
@@ -1312,12 +1321,12 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="UpdateApkReadyListener_Signal_update">Actualizare Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">O nouă versiune de Signal este disponibilă, apasă pentru actualizare</string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">Blochez %s?</string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Contactele blocate nu vor mai putea sa-ți trimită mesaje sau să te sune.</string>
-  <string name="UnknownSenderView_block">Blochează</string>
-  <string name="UnknownSenderView_share_profile_with_s">Distribui profilul cu %s?</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Cea mai ușoară modalitate de a distribui informațiile despre profilul dvs. este să adăugați expeditorul la contactele dvs. Dacă nu doriți asta, puteți distribui informațiile despre profilul dvs. prin această modalitate.</string>
-  <string name="UnknownSenderView_share_profile">Distribuie profilul</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">Blochez %s?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Contactele blocate nu vor mai putea sa-ți trimită mesaje sau să te sune.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">Blochează</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">Distribui profilul cu %s?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Cea mai ușoară modalitate de a distribui informațiile despre profilul dvs. este să adăugați expeditorul la contactele dvs. Dacă nu doriți asta, puteți distribui informațiile despre profilul dvs. prin această modalitate.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">Distribuie profilul</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">Trimit mesajul?</string>
   <string name="UntrustedSendDialog_send">Trimiteți</string>
@@ -1707,7 +1716,7 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   </plurals>
   <string name="GroupUtil_group_name_is_now">Numele grupului este acum \'%1$s\'.</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Doriți să faceți vizibil numele și poza profilului pentru acest grup?</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Doriți să faceți vizibil numele și poza profilului pentru acest grup?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">Deblochează</string>
   <!--prompt_mms_activity-->
@@ -1935,7 +1944,6 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="preferences__typing_indicators">Indicatori tastare</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Dacă indicatorii de tastare sunt dezactivați, nu vei putea vedea indicatorii de tastare de la ceilalți.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Solicitați tastaturii dezactivarea învățării personalizate</string>
-  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">Contacte blocate</string> -->
   <string name="preferences_chats__when_using_mobile_data">Când se utilizează datele mobile </string>
   <string name="preferences_chats__when_using_wifi">Când se utilizează Wi-Fi </string>
   <string name="preferences_chats__when_roaming">Când se utilizează roaming-ul </string>
