--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -85,8 +85,10 @@
   <string name="AttachmentUploadJob_compressing_video_start">Komprimuje sa video…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Chyba pri prehrávaní zvuku!</string>
-  <!--BlockedContactsActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">Blokované kontakty</string> -->
+  <!--BlockedUsersActivity-->
+  <string name="BlockedUsersActivity__blocked_users_will">Blokovaní používatelia Vám nebudú môcť zavolať alebo posielať správy.</string>
+  <string name="BlockedUsersActivity__block">Blokovať</string>
+  <string name="BlockedUsersActivity__unblock">Odblokovať</string>
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">Zablokovať a opustiť %1$s?</string>
   <string name="BlockUnblockDialog_block_s">Zablokovať %1$s?</string>
@@ -499,12 +501,15 @@
     <item quantity="many">Títo členovia musia znova prijať pozvánku do skupiny a kým ju neprijmú, nebudú dostávať skupinové správy:</item>
     <item quantity="other">Títo členovia musia znova prijať pozvánku do skupiny a kým ju neprijmú, nebudú dostávať skupinové správy:</item>
   </plurals>
-  <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
+  <!-- Removed by excludeNonTranslatables <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
     <item quantity="one">Tento člen nedokáže vstupovať do Nových skupín a bol zo skupiny odstránený:</item>
     <item quantity="few">Títo členovia nedokážu vstupovať do Nových skupín a boli zo skupiny odstránení:</item>
     <item quantity="many">Títo členovia nedokážu vstupovať do Nových skupín a boli zo skupiny odstránení:</item>
     <item quantity="other">Títo členovia nedokážu vstupovať do Nových skupín a boli zo skupiny odstránení:</item>
-  </plurals>
+  </plurals> -->
+  <!--GroupsV1MigrationSuggestionsReminder-->
+  <string name="GroupsV1MigrationSuggestionsReminder_not_now">Teraz nie</string>
+  <!--GroupsV1MigrationSuggestionsDialog-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Opustiť skupinu?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Nebudete môcť poslať ani prijať správy z tejto skupiny.</string>
@@ -1204,9 +1209,13 @@
   <string name="WebRtcCallView__signal_voice_call">Signal hlasový hovor…</string>
   <string name="WebRtcCallView__signal_video_call">Signal videohovor…</string>
   <string name="WebRtcCallView__start_call">Začať hovor</string>
-  <!-- Removed by excludeNonTranslatables <string name="WebRtcCallView__group_call">Skupinový hovor</string> -->
+  <string name="WebRtcCallView__join_call">Pripojiť sa k hovoru</string>
   <string name="WebRtcCallView__view_participants_list">Zobraziť účastníkov</string>
   <string name="WebRtcCallView__your_video_is_off">Vaše video je vypnuté</string>
+  <string name="WebRtcCallView__connecting">Pripájanie…</string>
+  <string name="WebRtcCallView__reconnecting">Pripájanie…</string>
+  <string name="WebRtcCallView__disconnected">Odpojený</string>
+  <string name="WebRtcCallView__no_one_else_is_here">Nikto iný tu nie je</string>
   <!--CallParticipantsListDialog-->
   <plurals name="CallParticipantsListDialog_in_this_call_d_people">
     <item quantity="one">V tomto hovore · %1$d osoba</item>
@@ -1384,12 +1393,12 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <string name="UpdateApkReadyListener_Signal_update">Aktualizácia Signalu</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">K dispozícii je nová verzia Signalu, ťuknutím aktualizujte</string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">Blokovať %s?</string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Blokované kontakty vám nebudú môcť poslať správy alebo vám zavolať.</string>
-  <string name="UnknownSenderView_block">Blokovať</string>
-  <string name="UnknownSenderView_share_profile_with_s">Zdieľať profil s %s?</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Najjednoduchší spôsob ako zdieľať Váš profil, je pridať odosieľateľa medzi kontakty. Ak si to neželáte, stále môžete zdieľať svoj profil týmto spôsobom.</string>
-  <string name="UnknownSenderView_share_profile">Zdieľať profil</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">Blokovať %s?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Blokované kontakty vám nebudú môcť poslať správy alebo vám zavolať.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">Blokovať</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">Zdieľať profil s %s?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Najjednoduchší spôsob ako zdieľať Váš profil, je pridať odosieľateľa medzi kontakty. Ak si to neželáte, stále môžete zdieľať svoj profil týmto spôsobom.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">Zdieľať profil</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">Odoslať správu?</string>
   <string name="UntrustedSendDialog_send">Odoslať</string>
@@ -1789,7 +1798,7 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   </plurals>
   <string name="GroupUtil_group_name_is_now">Názov skupiny je teraz \"%1$s\".</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Nastaviť vaše meno a profilovú fotku ako viditeľné pre túto skupinu?</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Nastaviť vaše meno a profilovú fotku ako viditeľné pre túto skupinu?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">Odomknúť</string>
   <!--prompt_mms_activity-->
@@ -2017,7 +2026,6 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <string name="preferences__typing_indicators">Indikátory písania</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Keď sú indikátory písania vypnuté, nezobrazia sa Vám ani indikátory iných.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Požiadať klávesnicu aby sa neučila</string>
-  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">Blokované kontakty</string> -->
   <string name="preferences_chats__when_using_mobile_data">Pri použití mobilných dát</string>
   <string name="preferences_chats__when_using_wifi">Pri použití Wi-Fi</string>
   <string name="preferences_chats__when_roaming">Pri roamingu</string>
