--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -85,8 +85,17 @@
   <string name="AttachmentUploadJob_compressing_video_start">Kompresija videa …</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Napaka pri predvajanju zvoka!</string>
-  <!--BlockedContactsActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">Blokirani uporabniki/ce</string> -->
+  <!--BlockedUsersActivity-->
+  <string name="BlockedUsersActivity__blocked_users">Blokirani/e uporabniki/ce</string>
+  <string name="BlockedUsersActivity__add_blocked_user">Dodaj blokiranega uporabnika/co</string>
+  <string name="BlockedUsersActivity__blocked_users_will">Blokirani/e uporabniki/ce vas ne bodo mogli/e klicati, oziroma vam pošiljati sporočil.</string>
+  <string name="BlockedUsersActivity__no_blocked_users">Ni blokiranih uporabnikov/ic</string>
+  <string name="BlockedUsersActivity__block_user">Želite blokirati uporabnika/co?</string>
+  <string name="BlockedUserActivity__s_will_not_be_able_to">Uporabnik/ca \"%1$s\" vas ne bodo mogel/la klicati ali vam pošiljati sporočil.</string>
+  <string name="BlockedUsersActivity__block">Blokiraj</string>
+  <string name="BlockedUsersActivity__unblock_user">Želite odblokirati uporabnika/co?</string>
+  <string name="BlockedUsersActivity__do_you_want_to_unblock_s">Želite odbloirati uporabnika/co \"%1$s\"?</string>
+  <string name="BlockedUsersActivity__unblock">Odblokiraj</string>
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">Blokiram in zapustim skupino %1$s?</string>
   <string name="BlockUnblockDialog_block_s">Blokiram uporabnika/co %1$s?</string>
@@ -499,11 +508,56 @@
     <item quantity="few">Ti/te člani/ce bodo morali/e potrditi vabilo za ponovno pridružitev skupini in do takrat ne bodo mogli/e prejemati novih sporočil skupine:</item>
     <item quantity="other">Ti/te člani/ce bodo morali/e potrditi vabilo za ponovno pridružitev skupini in do takrat ne bodo mogli/e prejemati novih sporočil skupine:</item>
   </plurals>
-  <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
+  <!-- Removed by excludeNonTranslatables <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
     <item quantity="one">Ta član/ica se ne more pridružiti Novim skupinam, zato je bil/a odstranjen/a iz skupine:</item>
     <item quantity="two">Ta/ti dva/e člana/ici se ne moreta pridružiti Novim skupinam, zato sta bila/i odstranjena/i iz skupine:</item>
     <item quantity="few">Ti/te člani/ce se ne morejo pridružiti Novim skupinam, zato so bili/e odstranjeni/e iz skupine:</item>
     <item quantity="other">Ti/te člani/ce se ne morejo pridružiti Novim skupinam, zato so bili/e odstranjeni/e iz skupine:</item>
+  </plurals> -->
+  <!--GroupsV1MigrationSuggestionsReminder-->
+  <plurals name="GroupsV1MigrationSuggestionsReminder_members_couldnt_be_added_to_the_new_group">
+    <item quantity="one">%1$d član/ica ni mogel/la biti ponovno dodan/a v Novo skupino. Ga/jo želite dodati zdaj?</item>
+    <item quantity="two">%1$d člana/ici nista mogla/i biti ponovno dodana/i v Novo skupino. Ju želite dodati zdaj?</item>
+    <item quantity="few">%1$d člani/ice niso mogli/e biti ponovno dodani/e v Novo skupino. Jih želite dodati zdaj?</item>
+    <item quantity="other">%1$d članov/ic ni moglo biti ponovno dodanih v Novo skupino. Jih želite dodati zdaj?</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsReminder_add_members">
+    <item quantity="one">Dodaj člana/ico</item>
+    <item quantity="two">Dodaj člana/ici</item>
+    <item quantity="few">Dodaj člane/ice</item>
+    <item quantity="other">Dodaj člane/ice</item>
+  </plurals>
+  <string name="GroupsV1MigrationSuggestionsReminder_not_now">Ne zdaj</string>
+  <!--GroupsV1MigrationSuggestionsDialog-->
+  <plurals name="GroupsV1MigrationSuggestionsDialog_add_members_question">
+    <item quantity="one">Želite dodati člana/ico?</item>
+    <item quantity="two">Želite dodati člana/ici?</item>
+    <item quantity="few">Želite dodati člane/ice?</item>
+    <item quantity="other">Želite dodati člane/ice?</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsDialog_these_members_couldnt_be_automatically_added">
+    <item quantity="one">Ta član/ica ni mogel/la biti avtomatično dodan/a, ko je bila skupina nadgrajena v Novo skupino:</item>
+    <item quantity="two">Ta/i člana/ici nista mogla/i biti avtomatično dodana/i, ko je bila skupina nadgrajena v Novo skupino:</item>
+    <item quantity="few">Ti/e člani/ce niso mogli/e biti avtomatično dodani/e, ko je bila skupina nadgrajena v Novo skupino:</item>
+    <item quantity="other">Ti/e člani/ce niso mogli/e biti avtomatično dodani/e, ko je bila skupina nadgrajena v Novo skupino:</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsDialog_add_members">
+    <item quantity="one">Dodaj člana/ico</item>
+    <item quantity="two">Dodaj člana/ici</item>
+    <item quantity="few">Dodaj člane/ice</item>
+    <item quantity="other">Dodaj člane/ice</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsDialog_failed_to_add_members_try_again_later">
+    <item quantity="one">Dodajanje člana/ice ni bilo uspešno. Poskusite znova kasneje.</item>
+    <item quantity="two">Dodajanje članov/ic ni bilo uspešno. Poskusite znova kasneje.</item>
+    <item quantity="few">Dodajanje članov/ic ni bilo uspešno. Poskusite znova kasneje.</item>
+    <item quantity="other">Dodajanje članov/ic ni bilo uspešno. Poskusite znova kasneje.</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsDialog_cannot_add_members">
+    <item quantity="one">Dodajanje člana/ice ni mogoče.</item>
+    <item quantity="two">Dodajanje članov/ic ni mogoče.</item>
+    <item quantity="few">Dodajanje članov/ic ni mogoče.</item>
+    <item quantity="other">Dodajanje članov/ic ni mogoče.</item>
   </plurals>
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Želite zapustiti skupino?</string>
@@ -1204,9 +1258,23 @@
   <string name="WebRtcCallView__signal_voice_call">Zvočni klic Signal …</string>
   <string name="WebRtcCallView__signal_video_call">Video klic Signal …</string>
   <string name="WebRtcCallView__start_call">Začni klic</string>
-  <!-- Removed by excludeNonTranslatables <string name="WebRtcCallView__group_call">Skupinski klic</string> -->
+  <string name="WebRtcCallView__join_call">Pridruži se klicu</string>
+  <string name="WebRtcCallView__s_group_call">\"%1$s\" Skupinski klic</string>
   <string name="WebRtcCallView__view_participants_list">Prikaži sodelujoče</string>
   <string name="WebRtcCallView__your_video_is_off">Vaš video je izključen</string>
+  <string name="WebRtcCallView__connecting">Povezovanje …</string>
+  <string name="WebRtcCallView__reconnecting">Ponovno povezovanje …</string>
+  <string name="WebRtcCallView__joining">Pridruževanje …</string>
+  <string name="WebRtcCallView__disconnected">Povezava je prekinjena</string>
+  <string name="WebRtcCallView__no_one_else_is_here">Tu ni nikogar drugega</string>
+  <string name="WebRtcCallView__s_is_in_this_call">Uporabnik/ca %1$s je v tem klicu</string>
+  <string name="WebRtcCallView__s_and_s_are_in_this_call">Uporabnika/ci %1$s in %2$s sta v tem klicu</string>
+  <plurals name="WebRtcCallView__s_s_and_d_others_are_in_this_call">
+    <item quantity="one">Uporabnika/ci  %1$s, %2$s, in še %3$d drug/a so v tem klicu</item>
+    <item quantity="two">Uporabnika/ci  %1$s, %2$s, in še %3$d druga/i so v tem klicu</item>
+    <item quantity="few">Uporabnika/ci  %1$s, %2$s, in še %3$d drugi/e so v tem klicu</item>
+    <item quantity="other">Uporabnika/ci %1$s, %2$s, in še %3$d drugih so v tem klicu</item>
+  </plurals>
   <!--CallParticipantsListDialog-->
   <plurals name="CallParticipantsListDialog_in_this_call_d_people">
     <item quantity="one">Na tem klicu · %1$d človek</item>
@@ -1376,12 +1444,12 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="UpdateApkReadyListener_Signal_update">Nadgradnja aplikacije Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Na voljo je nova različica aplikacije Signal. Tapnite za nadgradnjo.</string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">Blokiram uporabnika/co %s?</string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Blokirani uporabniki/ce vam ne bodo več mogli pošiljati sporočil ali vas klicati.</string>
-  <string name="UnknownSenderView_block">Blokiraj</string>
-  <string name="UnknownSenderView_share_profile_with_s">Želite deliti profil z uporabnikom/co %s?</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Svoj profil boste najlažje delili tako, da dodate pošiljatelja med stike na vaši napravi. Če tega ne želite, lahko delite profil tudi na ta način.</string>
-  <string name="UnknownSenderView_share_profile">Deli profil</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">Blokiram uporabnika/co %s?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Blokirani uporabniki/ce vam ne bodo več mogli pošiljati sporočil ali vas klicati.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">Blokiraj</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">Želite deliti profil z uporabnikom/co %s?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Svoj profil boste najlažje delili tako, da dodate pošiljatelja med stike na vaši napravi. Če tega ne želite, lahko delite profil tudi na ta način.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">Deli profil</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">Pošljem sporočilo?</string>
   <string name="UntrustedSendDialog_send">Pošlji</string>
@@ -1781,7 +1849,7 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   </plurals>
   <string name="GroupUtil_group_name_is_now">Novo ime skupine je \'%1$s\'.</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Želte, da sta ime vašega profila in predstavitvena fotografija vidni tej skupini?</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Želte, da sta ime vašega profila in predstavitvena fotografija vidni tej skupini?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">Odkleni</string>
   <!--prompt_mms_activity-->
@@ -2009,7 +2077,7 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="preferences__typing_indicators">Kazalniki tipkanja</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Če nimate vklopljenih kazalnikov tipkanja zase, tudi ne morete videti kdaj vaš partner tipka svoje sporočilo.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Zahteva tipkovnici za izklop personaliziranega učenja</string>
-  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">Blokirani uporabniki/ce</string> -->
+  <string name="preferences_app_protection__blocked_users">Blokirani/e uporabniki/ce</string>
   <string name="preferences_chats__when_using_mobile_data">Ob uporabi mobilnega omrežja</string>
   <string name="preferences_chats__when_using_wifi">Ob uporabi omrežja Wi-Fi</string>
   <string name="preferences_chats__when_roaming">Med gostovanjem</string>
@@ -2072,6 +2140,7 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <!--****************************************-->
   <!--contact_selection_list-->
   <string name="contact_selection_list__unknown_contact">Novo sporočilo za …</string>
+  <string name="contact_selection_list__unknown_contact_block">Blokiraj uporabnika/co</string>
   <string name="contact_selection_list__unknown_contact_add_to_group">Dodaj v skupino</string>
   <!--conversation_callable_insecure-->
   <string name="conversation_callable_insecure__menu_call">Kliči</string>
@@ -2497,6 +2566,9 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s do %2$s</string>
   <!--StorageUtil-->
   <string name="StorageUtil__s_s">%1$s/%2$s</string>
+  <string name="BlockedUsersActivity__s_has_been_blocked">Uporabnik/ca \"%1$s\" je bil/a blokiran/a.</string>
+  <string name="BlockedUsersActivity__failed_to_block_s">Blokada člana/ice \"%1$s\" ni uspela</string>
+  <string name="BlockedUsersActivity__s_has_been_unblocked">Uporabnik/ca \"%1$s\" je bil/a odblokirana.</string>
   <!--ReviewCardDialogFragment-->
   <string name="ReviewCardDialogFragment__review_members">Pregled članov/ic</string>
   <string name="ReviewCardDialogFragment__review_request">Pregled prošenj</string>
