--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -79,8 +79,17 @@
   <string name="AttachmentUploadJob_compressing_video_start">Komprimerar video…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Fel vid uppspelning av ljud!</string>
-  <!--BlockedContactsActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">Blockerade kontakter</string> -->
+  <!--BlockedUsersActivity-->
+  <string name="BlockedUsersActivity__blocked_users">Blockerade användare</string>
+  <string name="BlockedUsersActivity__add_blocked_user">Lägg till blockerad användare</string>
+  <string name="BlockedUsersActivity__blocked_users_will">Blockerade användare kommer inte att kunna ringa eller skicka meddelanden till dig.</string>
+  <string name="BlockedUsersActivity__no_blocked_users">Inga blockerade användare</string>
+  <string name="BlockedUsersActivity__block_user">Blockera användare?</string>
+  <string name="BlockedUserActivity__s_will_not_be_able_to">\"%1$s\" kommer inte att kunna ringa eller skicka meddelanden till dig.</string>
+  <string name="BlockedUsersActivity__block">Blockera</string>
+  <string name="BlockedUsersActivity__unblock_user">Avblockera användare?</string>
+  <string name="BlockedUsersActivity__do_you_want_to_unblock_s">Vill du avblockera \"%1$s\"?</string>
+  <string name="BlockedUsersActivity__unblock">Sluta blockera</string>
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">Blockera och lämna %1$s?</string>
   <string name="BlockUnblockDialog_block_s">Blockera %1$s?</string>
@@ -465,9 +474,40 @@
     <item quantity="one">Denna medlem måste acceptera en inbjudan att gå med i gruppen igen och kommer inte att få gruppmeddelanden förrän de accepterar:</item>
     <item quantity="other">Dessa medlemmar måste acceptera en inbjudan att gå med i gruppen igen och kommer inte att få gruppmeddelanden förrän de accepterar:</item>
   </plurals>
-  <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
+  <!-- Removed by excludeNonTranslatables <plurals name="GroupsV1MigrationLearnMore_these_members_are_not_capable_of_joining_new_groups">
     <item quantity="one">Denna medlem kan inte gå med i nya grupper och har tagits bort från gruppen:</item>
     <item quantity="other">Dessa medlemmar kan inte gå med i Nya grupper och har tagits bort från gruppen:</item>
+  </plurals> -->
+  <!--GroupsV1MigrationSuggestionsReminder-->
+  <plurals name="GroupsV1MigrationSuggestionsReminder_members_couldnt_be_added_to_the_new_group">
+    <item quantity="one">%1$d medlem kunde inte läggas till igen i den Nya gruppen. Vill du lägga till dem nu?</item>
+    <item quantity="other">%1$d medlemmar kunde inte läggas till igen i den Nya gruppen. Vill du lägga till dem nu?</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsReminder_add_members">
+    <item quantity="one">Lägg till medlem</item>
+    <item quantity="other">Lägg till medlemmar</item>
+  </plurals>
+  <string name="GroupsV1MigrationSuggestionsReminder_not_now">Inte nu</string>
+  <!--GroupsV1MigrationSuggestionsDialog-->
+  <plurals name="GroupsV1MigrationSuggestionsDialog_add_members_question">
+    <item quantity="one">Lägg till medlem?</item>
+    <item quantity="other">Lägg till medlemmar?</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsDialog_these_members_couldnt_be_automatically_added">
+    <item quantity="one">Den här medlemmen kunde inte läggas till automatiskt i den Nya gruppen när den uppgraderades:</item>
+    <item quantity="other">Dessa medlemmar kunde inte läggas till automatiskt i den Nya gruppen när den uppgraderades:</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsDialog_add_members">
+    <item quantity="one">Lägg till medlem</item>
+    <item quantity="other">Lägg till medlemmar</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsDialog_failed_to_add_members_try_again_later">
+    <item quantity="one">Det gick inte att lägga till medlem. Försök igen senare.</item>
+    <item quantity="other">Det gick inte att lägga till medlemmar. Försök igen senare.</item>
+  </plurals>
+  <plurals name="GroupsV1MigrationSuggestionsDialog_cannot_add_members">
+    <item quantity="one">Det går inte att lägga till medlem.</item>
+    <item quantity="other">Det går inte att lägga till medlemmar.</item>
   </plurals>
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Lämna grupp?</string>
@@ -1108,9 +1148,21 @@
   <string name="WebRtcCallView__signal_voice_call">Signal-röstsamtal…</string>
   <string name="WebRtcCallView__signal_video_call">Signal-videosamtal…</string>
   <string name="WebRtcCallView__start_call">Starta samtal</string>
-  <!-- Removed by excludeNonTranslatables <string name="WebRtcCallView__group_call">Gruppsamtal</string> -->
+  <string name="WebRtcCallView__join_call">Gå med i samtalet</string>
+  <string name="WebRtcCallView__s_group_call">\"%1$s\" gruppsamtal</string>
   <string name="WebRtcCallView__view_participants_list">Visa deltagare</string>
   <string name="WebRtcCallView__your_video_is_off">Din video är avstängd</string>
+  <string name="WebRtcCallView__connecting">Ansluter…</string>
+  <string name="WebRtcCallView__reconnecting">Återansluter…</string>
+  <string name="WebRtcCallView__joining">Ansluter sig…</string>
+  <string name="WebRtcCallView__disconnected">Frånkopplad</string>
+  <string name="WebRtcCallView__no_one_else_is_here">Ingen annan är här</string>
+  <string name="WebRtcCallView__s_is_in_this_call">%1$s är i detta samtal</string>
+  <string name="WebRtcCallView__s_and_s_are_in_this_call">%1$s och %2$s är i detta samtal</string>
+  <plurals name="WebRtcCallView__s_s_and_d_others_are_in_this_call">
+    <item quantity="one">%1$s, %2$s och %3$d andra är i detta samtal</item>
+    <item quantity="other">%1$s, %2$s och %3$d andra är med i detta samtal</item>
+  </plurals>
   <!--CallParticipantsListDialog-->
   <plurals name="CallParticipantsListDialog_in_this_call_d_people">
     <item quantity="one">I detta samtal · %1$d person</item>
@@ -1279,12 +1331,12 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="UpdateApkReadyListener_Signal_update">Signal-uppdatering</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">En ny version av Signal finns tillgänglig, tryck för att uppdatera</string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">Blockera %s</string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Blockerade kontakter kommer inte längre att kunna skriva eller ringa till dig.</string>
-  <string name="UnknownSenderView_block">Blockera</string>
-  <string name="UnknownSenderView_share_profile_with_s">Dela profil med %s?</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Det lättaste sättet att dela din profilinformation på är genom att lägga till mottagaren till dina kontakter. Om du inte vill det kan du fortfarande dela på det här sättet.</string>
-  <string name="UnknownSenderView_share_profile">Dela profil</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">Blockera %s</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Blockerade kontakter kommer inte längre att kunna skriva eller ringa till dig.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">Blockera</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">Dela profil med %s?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Det lättaste sättet att dela din profilinformation på är genom att lägga till mottagaren till dina kontakter. Om du inte vill det kan du fortfarande dela på det här sättet.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">Dela profil</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">Skicka meddelande?</string>
   <string name="UntrustedSendDialog_send">Skicka</string>
@@ -1664,7 +1716,7 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   </plurals>
   <string name="GroupUtil_group_name_is_now">Gruppnamnet är nu \"%1$s\".</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Gör ditt profilnamn och profilbild synligt för denna grupp?</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Gör ditt profilnamn och profilbild synligt för denna grupp?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">Lås upp</string>
   <!--prompt_mms_activity-->
@@ -1890,7 +1942,7 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="preferences__typing_indicators">Skrivindikatorer</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Om skrivindikatorer är inaktiverade kommer du inte att kunna se skrivindikatorer från andra.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Begär att tangentbordet inaktiverar personlig inlärning</string>
-  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">Blockerade kontakter</string> -->
+  <string name="preferences_app_protection__blocked_users">Blockerade användare</string>
   <string name="preferences_chats__when_using_mobile_data">Vid användning av mobildata</string>
   <string name="preferences_chats__when_using_wifi">Vid användning av Wi-Fi</string>
   <string name="preferences_chats__when_roaming">Vid roaming</string>
@@ -1953,6 +2005,7 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <!--****************************************-->
   <!--contact_selection_list-->
   <string name="contact_selection_list__unknown_contact">Nytt meddelande till…</string>
+  <string name="contact_selection_list__unknown_contact_block">Blockera användare</string>
   <string name="contact_selection_list__unknown_contact_add_to_group">Lägg till i grupp</string>
   <!--conversation_callable_insecure-->
   <string name="conversation_callable_insecure__menu_call">Ring</string>
@@ -2364,6 +2417,9 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s till %2$s</string>
   <!--StorageUtil-->
   <string name="StorageUtil__s_s">%1$s/%2$s</string>
+  <string name="BlockedUsersActivity__s_has_been_blocked">\"%1$s\" har blockerats.</string>
+  <string name="BlockedUsersActivity__failed_to_block_s">Det gick inte att blockera \"%1$s\"</string>
+  <string name="BlockedUsersActivity__s_has_been_unblocked">\"%1$s\" har avblockerats.</string>
   <!--ReviewCardDialogFragment-->
   <string name="ReviewCardDialogFragment__review_members">Granska medlemmar</string>
   <string name="ReviewCardDialogFragment__review_request">Granskningsförfrågan</string>
