--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -79,8 +79,10 @@
   <string name="AttachmentUploadJob_compressing_video_start">காணொளி சுறுக்கப்படுகிறது…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">ஒலி இயக்குவதில் பிழை!</string>
-  <!--BlockedContactsActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">முடக்கப்பட்ட தொடர்புகள்</string> -->
+  <!--BlockedUsersActivity-->
+  <string name="BlockedUsersActivity__blocked_users_will">தடுக்கப்பட்ட பயனர்கள் உங்களை அழைக்கவோ அல்லது செய்திகளை அனுப்பவோ முடியாது.</string>
+  <string name="BlockedUsersActivity__block">தடு </string>
+  <string name="BlockedUsersActivity__unblock">தடைநீக்கு </string>
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">தடுத்து %1$sஐ விடவா?</string>
   <string name="BlockUnblockDialog_block_s">  %1$sஐ தடுத்து விடவா?</string>
@@ -432,6 +434,9 @@
   <string name="GroupManagement_learn_more">மேலும் அறிக</string>
   <string name="GroupManagement_invite_multiple_users">இந்த பயனர்களை இந்த குழுவில் தானாக உங்களால் சேர்க்க முடியாது. குழுவில் சேர அவர்கள் அழைக்கப்பட்டுள்ளனர், அவர்கள் ஏற்றுக்கொள்ளும் வரை எந்த குழு செய்திகளையும் பார்க்க மாட்டார்கள்.</string>
   <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
+  <!--GroupsV1MigrationSuggestionsReminder-->
+  <string name="GroupsV1MigrationSuggestionsReminder_not_now">இப்போது இல்லை</string>
+  <!--GroupsV1MigrationSuggestionsDialog-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">குழுவிலுருந்து விலகலாமா?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">இந்த குழுவில் நீங்கள் இனி செய்திகளை அனுப்பவோ பெறவோ முடியாது.</string>
@@ -980,6 +985,9 @@
   <!--WebRtcCallView-->
   <string name="WebRtcCallView__signal_voice_call">Signal குரல் அழைப்பு…</string>
   <string name="WebRtcCallView__signal_video_call">Signal காணொளி அழைப்பு…</string>
+  <string name="WebRtcCallView__connecting">இணைக்கிறது …</string>
+  <string name="WebRtcCallView__reconnecting">மீண்டும் இணைக்கிறது …</string>
+  <string name="WebRtcCallView__disconnected">துண்டிக்கப்பட்டது</string>
   <!--CallParticipantsListDialog-->
   <!--RegistrationActivity-->
   <string name="RegistrationActivity_select_your_country">உங்கள் நாட்டை தேர்ந்தெடுக்கவும்</string>
@@ -1145,12 +1153,12 @@
   <string name="UpdateApkReadyListener_Signal_update">Signal புதுப்பிப்பு</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Signal புதிய பதிப்பு கிடைக்கும், புதுப்பிக்க தட்டவும்</string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">%s  ஐத் தடுக்கவா?</string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">தடுக்கப்பட்ட தொடர்புகள் இனி உங்களுக்கு செய்திகளை அனுப்பவோ அல்லது உங்களை அழைக்கவோ முடியாது.</string>
-  <string name="UnknownSenderView_block">முடக்கு</string>
-  <string name="UnknownSenderView_share_profile_with_s">சுயவிவரத்தை %s உடன் பகிரவா?</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">உங்கள் சுயவிவரத் தகவலைப் பகிர எளிதான வழி, உங்கள் தொடர்புகளில் அனுப்புநரைச் சேர்ப்பது. நீங்கள் விரும்பவில்லை என்றால், உங்கள் சுயவிவரத் தகவலை இந்த வழியில் பகிரலாம்.</string>
-  <string name="UnknownSenderView_share_profile">சுயவிவரத்தைப் பகிரவும்</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">%s  ஐத் தடுக்கவா?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">தடுக்கப்பட்ட தொடர்புகள் இனி உங்களுக்கு செய்திகளை அனுப்பவோ அல்லது உங்களை அழைக்கவோ முடியாது.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">முடக்கு</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">சுயவிவரத்தை %s உடன் பகிரவா?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">உங்கள் சுயவிவரத் தகவலைப் பகிர எளிதான வழி, உங்கள் தொடர்புகளில் அனுப்புநரைச் சேர்ப்பது. நீங்கள் விரும்பவில்லை என்றால், உங்கள் சுயவிவரத் தகவலை இந்த வழியில் பகிரலாம்.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">சுயவிவரத்தைப் பகிரவும்</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">செய்தி அனுப்ப?</string>
   <string name="UntrustedSendDialog_send">அனுப்புக</string>
@@ -1520,7 +1528,7 @@
   </plurals>
   <string name="GroupUtil_group_name_is_now">இக்குழுவின் பெயர் இப்பொழுது  \'%1$s\'.</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">உங்கள் சுயவிவரப் பெயரையும் புகைப்படத்தையும் இந்தக் குழுவுக்கு தெரியப்படுத்தவா?</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">உங்கள் சுயவிவரப் பெயரையும் புகைப்படத்தையும் இந்தக் குழுவுக்கு தெரியப்படுத்தவா?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">திற</string>
   <!--prompt_mms_activity-->
@@ -1747,7 +1755,6 @@
   <string name="preferences__typing_indicators">தட்டச்சு குறிகாட்டிகள்</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">தட்டச்சு குறிகாட்டிகள் முடக்கப்பட்டிருந்தால், மற்றவர்களிடமிருந்து தட்டச்சு குறிகாட்டிகளை நீங்கள் பார்க்க முடியாது.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">தனிப்பயனாக்கப்பட்ட கற்றலை முடக்க விசைப்பலகை கோருங்கள்</string>
-  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">முடக்கப்பட்ட தொடர்புகள்</string> -->
   <string name="preferences_chats__when_using_mobile_data">மொபைல் தரவைப் பயன்படுத்தும் போது</string>
   <string name="preferences_chats__when_using_wifi">வைஃபை பயன்படுத்தும் போது</string>
   <string name="preferences_chats__when_roaming">ரோமிங் செய்யும் போது</string>
