--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -79,8 +79,10 @@
   <string name="AttachmentUploadJob_compressing_video_start">Video sıkıştırılıyor…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">Ses oynatılırken hata!</string>
-  <!--BlockedContactsActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">Engellenmiş kişiler</string> -->
+  <!--BlockedUsersActivity-->
+  <string name="BlockedUsersActivity__blocked_users_will">Engellenen kullanıcılar sizi arayamaz veya size ileti gönderemez.</string>
+  <string name="BlockedUsersActivity__block">Engelle</string>
+  <string name="BlockedUsersActivity__unblock">Engeli kaldır</string>
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">%1$s grubunu engelle ve ayrıl?</string>
   <string name="BlockUnblockDialog_block_s">%1$s engellensin mi?</string>
@@ -453,6 +455,9 @@
   <string name="GroupManagement_learn_more">Dahasını öğrenin</string>
   <string name="GroupManagement_invite_multiple_users">Bu kullanıcılar otomatik olarak bu gruba eklenemez.\n\nKatılmaları için davet gönderildi ve daveti kabul edene kadar hiçbir grup iletisini görmeyecekler.</string>
   <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
+  <!--GroupsV1MigrationSuggestionsReminder-->
+  <string name="GroupsV1MigrationSuggestionsReminder_not_now">Şimdi değil</string>
+  <!--GroupsV1MigrationSuggestionsDialog-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">Gruptan ayrıl?</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">Bu gruptan artık ileti almayacak ve gönderemeyeceksiniz.</string>
@@ -1086,9 +1091,13 @@
   <string name="WebRtcCallView__signal_voice_call">Signal sesli arama…</string>
   <string name="WebRtcCallView__signal_video_call">Signal görüntülü arama…</string>
   <string name="WebRtcCallView__start_call">Arama Başlat</string>
-  <!-- Removed by excludeNonTranslatables <string name="WebRtcCallView__group_call">Grup Araması</string> -->
+  <string name="WebRtcCallView__join_call">Çağrıya Katıl</string>
   <string name="WebRtcCallView__view_participants_list">Katılımcıları Görüntüle</string>
   <string name="WebRtcCallView__your_video_is_off">Görüntünüz kapalı</string>
+  <string name="WebRtcCallView__connecting">Bağlanıyor…</string>
+  <string name="WebRtcCallView__reconnecting">Yeniden bağlanıyor…</string>
+  <string name="WebRtcCallView__disconnected">Bağlantı yok</string>
+  <string name="WebRtcCallView__no_one_else_is_here">Burada kimse yok</string>
   <!--CallParticipantsListDialog-->
   <plurals name="CallParticipantsListDialog_in_this_call_d_people">
     <item quantity="one">Bu aramada · %1$d kişi</item>
@@ -1260,12 +1269,12 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="UpdateApkReadyListener_Signal_update">Signal güncellemesi</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Signal\'in yeni sürümü mevcut, güncellemek için dokunun</string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">\'%s\' engellensin mi?</string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Engellenmiş kişiler artık size ileti gönderemeyecek ya da sizi arayamayacaklardır.</string>
-  <string name="UnknownSenderView_block">Engelle</string>
-  <string name="UnknownSenderView_share_profile_with_s">%s ile profiliniz paylaşılsın mı?</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Profilinizi paylaşmanın en kolay yolu göndereni kişilerinize eklemektir. Bunu yapmak istemiyorsanız, profilinizi bu şekilde de paylaşabilirsiniz.</string>
-  <string name="UnknownSenderView_share_profile">Profili paylaş</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">\'%s\' engellensin mi?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Engellenmiş kişiler artık size ileti gönderemeyecek ya da sizi arayamayacaklardır.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">Engelle</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">%s ile profiliniz paylaşılsın mı?</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Profilinizi paylaşmanın en kolay yolu göndereni kişilerinize eklemektir. Bunu yapmak istemiyorsanız, profilinizi bu şekilde de paylaşabilirsiniz.</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">Profili paylaş</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">İleti gönderilsin mi?</string>
   <string name="UntrustedSendDialog_send">Gönder</string>
@@ -1644,7 +1653,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   </plurals>
   <string name="GroupUtil_group_name_is_now">Grup adı artık \'%1$s\'.</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Profil adınızı ve fotoğrafınızı bu gruba görünür yapın?</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">Profil adınızı ve fotoğrafınızı bu gruba görünür yapın?</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">Kilidi aç</string>
   <!--prompt_mms_activity-->
@@ -1870,7 +1879,6 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="preferences__typing_indicators">Yazma göstergeleri</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">Yazma göstergeleri etkin değilse, başkalarının yazma göstergelerini göremeyeceksiniz.</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">Klavyenin kişiselleştirilmiş öğrenmeyi devre dışı bırakmasını iste</string>
-  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">Engellenmiş kişiler</string> -->
   <string name="preferences_chats__when_using_mobile_data">Mobil veri kullanırken</string>
   <string name="preferences_chats__when_using_wifi">Kablosuz ağ kullanırken</string>
   <string name="preferences_chats__when_roaming">Dolaşımdayken</string>
