--- a/app/src/main/res/values-ur/strings.xml
+++ b/app/src/main/res/values-ur/strings.xml
@@ -789,12 +789,12 @@
   <string name="UpdateApkReadyListener_Signal_update">Signal اپ ڈیٹ</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Signal کا نیا ورژن دستیاب ہے، تجدید کے لیے ٹیپ کریں</string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">بلاک %s؟</string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">بلاک کردہ رابطے آپ کو پیغامات بھیجنے یا کال کرنے کے قابل نہیں ہوں گے۔</string>
-  <string name="UnknownSenderView_block">بلاک</string>
-  <string name="UnknownSenderView_share_profile_with_s">پروفائل %sکے ساتھ اشتراک کریں؟</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">پروفائل معلومات کا اشتراک کرنے کا آسان طریقہ بھیجنے والے کو اپنے رابطوں میں شامل کریں۔ اگر آپ کی خواہش نہیں تو، آپ اس طریقہ سے پروفائل کی معلومات کا اشتراک کر سکتے ہیں۔</string>
-  <string name="UnknownSenderView_share_profile">پروفائل کا اشتراک کریں</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">بلاک %s؟</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">بلاک کردہ رابطے آپ کو پیغامات بھیجنے یا کال کرنے کے قابل نہیں ہوں گے۔</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">بلاک</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">پروفائل %sکے ساتھ اشتراک کریں؟</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">پروفائل معلومات کا اشتراک کرنے کا آسان طریقہ بھیجنے والے کو اپنے رابطوں میں شامل کریں۔ اگر آپ کی خواہش نہیں تو، آپ اس طریقہ سے پروفائل کی معلومات کا اشتراک کر سکتے ہیں۔</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">پروفائل کا اشتراک کریں</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">پیغام بھیجیں؟</string>
   <string name="UntrustedSendDialog_send">بھیجیں</string>
@@ -1141,7 +1141,7 @@
   </plurals>
   <string name="GroupUtil_group_name_is_now">گروپ کا نام اب یہ ہے\'%1$s\'</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">اس گروپ کو اپنے پروفائل نام اور تصویر دکھائیں؟</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">اس گروپ کو اپنے پروفائل نام اور تصویر دکھائیں؟</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">ان بلاک</string>
   <!--prompt_mms_activity-->
