--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -76,8 +76,10 @@
   <string name="AttachmentUploadJob_compressing_video_start">压缩视频中…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">播放音频出错！</string>
-  <!--BlockedContactsActivity-->
-  <!-- Removed by excludeNonTranslatables <string name="BlockedContactsActivity_blocked_contacts">已屏蔽的联系人</string> -->
+  <!--BlockedUsersActivity-->
+  <string name="BlockedUsersActivity__blocked_users_will">被屏蔽的用户将无法向您发起通话，或发送消息。</string>
+  <string name="BlockedUsersActivity__block">屏蔽</string>
+  <string name="BlockedUsersActivity__unblock">取消屏蔽</string>
   <!--BlockUnblockDialog-->
   <string name="BlockUnblockDialog_block_and_leave_s">屏蔽并离开%1$s?</string>
   <string name="BlockUnblockDialog_block_s">屏蔽%1$s?</string>
@@ -438,6 +440,9 @@
   <string name="GroupManagement_learn_more">了解更多</string>
   <string name="GroupManagement_invite_multiple_users">这些用户不能直接被你邀请入群组。\n\n他们已经收到入群邀请，但在他们同意之前无法收到来自该群组的任何消息。</string>
   <!--GroupsV1MigrationLearnMoreBottomSheetDialogFragment-->
+  <!--GroupsV1MigrationSuggestionsReminder-->
+  <string name="GroupsV1MigrationSuggestionsReminder_not_now">稍后再说</string>
+  <!--GroupsV1MigrationSuggestionsDialog-->
   <!--LeaveGroupDialog-->
   <string name="LeaveGroupDialog_leave_group">离开群组？</string>
   <string name="LeaveGroupDialog_you_will_no_longer_be_able_to_send_or_receive_messages_in_this_group">您将无法在这个群聊里面发送和接收消息。</string>
@@ -1042,9 +1047,13 @@
   <string name="WebRtcCallView__signal_voice_call">Signal 语音通话…</string>
   <string name="WebRtcCallView__signal_video_call">Signal 视频通话…</string>
   <string name="WebRtcCallView__start_call">发起通话</string>
-  <!-- Removed by excludeNonTranslatables <string name="WebRtcCallView__group_call">群组通话</string> -->
+  <string name="WebRtcCallView__join_call">加入呼叫</string>
   <string name="WebRtcCallView__view_participants_list">查看参与者</string>
   <string name="WebRtcCallView__your_video_is_off">您的视频已关闭</string>
+  <string name="WebRtcCallView__connecting">正在连接…</string>
+  <string name="WebRtcCallView__reconnecting">重连中…</string>
+  <string name="WebRtcCallView__disconnected">连接已断开</string>
+  <string name="WebRtcCallView__no_one_else_is_here">没有人在这里</string>
   <!--CallParticipantsListDialog-->
   <plurals name="CallParticipantsListDialog_in_this_call_d_people">
     <item quantity="other">此通话 · %1$d位用户</item>
@@ -1215,12 +1224,12 @@
   <string name="UpdateApkReadyListener_Signal_update">Signal 更新</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Signal 新版本可用，点击升级</string>
   <!--UnknownSenderView-->
-  <string name="UnknownSenderView_block_s">屏蔽 %s？</string>
-  <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">已屏蔽联系人将无法再向您发送消息或呼叫。</string>
-  <string name="UnknownSenderView_block">屏蔽</string>
-  <string name="UnknownSenderView_share_profile_with_s">分享个人资料至 %s？</string>
-  <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">分享个人资料的最简便方式是将发送人添加至联系人。如果不想添加，仍可使用该方式分享。</string>
-  <string name="UnknownSenderView_share_profile">分享个人资料</string>
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block_s">屏蔽 %s？</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">已屏蔽联系人将无法再向您发送消息或呼叫。</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_block">屏蔽</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile_with_s">分享个人资料至 %s？</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">分享个人资料的最简便方式是将发送人添加至联系人。如果不想添加，仍可使用该方式分享。</string> -->
+  <!-- Removed by excludeNonTranslatables <string name="UnknownSenderView_share_profile">分享个人资料</string> -->
   <!--UntrustedSendDialog-->
   <string name="UntrustedSendDialog_send_message">发送消息？</string>
   <string name="UntrustedSendDialog_send">发送</string>
@@ -1589,7 +1598,7 @@
   </plurals>
   <string name="GroupUtil_group_name_is_now">现在群组名称为“%1$s”。</string>
   <!--profile_group_share_view-->
-  <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">个人资料名称和图片对该群组可见？</string>
+  <!-- Removed by excludeNonTranslatables <string name="profile_group_share_view__make_your_profile_name_and_photo_visible_to_this_group">个人资料名称和图片对该群组可见？</string> -->
   <!--prompt_passphrase_activity-->
   <string name="prompt_passphrase_activity__unlock">解锁</string>
   <!--prompt_mms_activity-->
@@ -1814,7 +1823,6 @@
   <string name="preferences__typing_indicators">“正在输入”提示</string>
   <string name="preferences__if_typing_indicators_are_disabled_you_wont_be_able_to_see_typing_indicators">禁用“正在输入”提示之后，无法查看其他用户的正在输入状态。</string>
   <string name="preferences__request_keyboard_to_disable_personalized_learning">禁用键盘的个性化学习功能</string>
-  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__blocked_contacts">已屏蔽联系人</string> -->
   <string name="preferences_chats__when_using_mobile_data">当使用移动数据时</string>
   <string name="preferences_chats__when_using_wifi">当使用 WiFi 时</string>
   <string name="preferences_chats__when_roaming">当漫游时</string>
